--- a/CS50/3. 배열.md
+++ b/CS50/3. 배열.md
@@ -420,3 +420,79 @@ int  main(void)
 }   
 ```   
 #### 2.2. ctype 라이브러리의 toupper()함수 이용
+```
+#include  <stdio.h>
+#include  <cs50.h>
+#include  <ctype.h>
+#include  <string.h>
+
+int  main(void)
+{
+	string  s = get_string("Input: ");
+	printf("Output: ");
+	for (int  i=0, n=strlen(s); i<n; i++)
+	{
+		printf("%c", toupper(s[i]));
+	}
+	printf("\n");
+}
+```
+## 8. 명령행인자 (Command-line Arguments)
+### 1. 명령행인자란?
+터미널창에 입력했던 것들을 기억할 것이다.
+1. `clang -o hello hello.c`
+2. `make hello`
+3. `help50 hello`
+여기에서 명령어는 clang, make, help이고, 명령행 인자는 -o hello, hello.c, hello가 된다. 즉, 명령어 뒤에 딸려서 입력되는 것들이 명령행인자다.
+
+### 2. int main(int argc, string argv[])
+여태까지 코드 본문은 int main(void)함수 안에 입력했었다. 이 때 void는 명령행인자가 없음을 뜻한다. 즉, 괄호 안에 인자를 넣으면 그것이 명령행 인자가 된다.
+1. string **argv[]**: 문자열로 된 인자의 배열을 뜻함
+2. int **argc**: argv 배열 안 인자의 갯수
+
+이제 새로 배운 내용을 적용해보자
+#### 2.1. argv.c
+```
+#include  <stdio.h>
+#include  <cs50.h>
+
+int  main(int  argc, string  argv[]) //명령행인자 넣음
+{
+	if (argc == 2)		//명령행 인자를 입력한 경우
+	{
+		printf("hello, %s\n", argv[1]);	   //"hello, 명령행 인자" 출력
+	}
+	else		//명령행 인자를 입력하지 않은 경우
+	{
+		printf("hello, world\n");
+	}
+}
+```
+터미널창의 결과는 다음과 같다.
+```
+$ ./argv 지혜		 -> 명령행 인자로 '지혜'를 입력했음
+hello, 지혜
+$ ./argv			 -> 명령행 인자를 입력하지 않았음.
+hello, world
+```
+
+#### 2.2. error.c
+```
+#include  <stdio.h>
+#include  <cs50.h>
+
+int  main(int  argc, string  argv[])
+{
+	if (argc != 2) //주석 1
+	{
+		printf("missing command-line argument\n");
+		return  1; //main함수가 1 반환: 뭔가 문제가 있다는 뜻
+	}
+	printf("hello, %s\n", argv[1]); //
+	return  0; //main함수가 0 반환: 문제가 없다는 뜻
+}
+```
+- 주석
+	1. 인자를 1개(이름)만 넣을텐데 왜 argc != 2인지 검사할까? (주석 2 보기)
+	2. argv[1]을 출력하는 이유(또는 위에서 argc != 2인지 검사한 이유): argv[0]에는 입력한 프로그램 이름, 즉 ./error이 저장된다.
+	3. int main(...)에서 앞에 int를 쓰는 이유(또는 error.c에서 return 1, return 0 입력한 이유):  **main()함수는 일반적으로 0을 반환**하는데 이는 프로그램에 이상이 없다는 것을 의미한다. 이상이 있는 경우 main은 -1, 1, -10억 등 0이 아닌 다양한 수를 반환한다.
