--- a/CS50/3. 배열.md
+++ b/CS50/3. 배열.md
@@ -146,9 +146,11 @@ i is now 10
 2. 터미널창에 `debug50 ./duggy2` 입력  
 <img width=400, src="https://i.esdrop.com/d/f/Hn3cQpRVXY/3JBjXVnBd5.png">  
 <img width=400, src="https://i.esdrop.com/d/f/Hn3cQpRVXY/AsZSPEiTBQ.png">  
-디버그창 나옴. 여기에서 디버그창 위쪽의 두번째 버튼 클릭하면 for문을 한단계 한단계씩 실행할 수 있고, 어디에서 잘못되었는지 알 수 있음.   
-- 디버깅 종료: Ctrl+C  
-#### 3.1. 중지점  
+
+디버그창 나옴. 여기에서 디버그창 위쪽의 두번째 버튼 클릭하면 for문을 한단계 한단계씩 실행할 수 있고, 어디에서 잘못되었는지 알 수 있음.        
+디버깅 종료: Ctrl+C  
+
+#### 3.1. 중지점      
 디버거는 프로그램을 특정 행에서 멈추고 한번에 한 행씩 프로그램을 실행할 수 있게 해주기 때문에 버그를 찾는데 도움이 된다. 중지점은 디버깅할 때 프로그램이 멈추는 특정 지점이다.   
 #### 3.2. GDB  
 GDB는 자주 쓰는 디버거 중 하나임. C프로그램에서 GDB사용하려면 우선 `make 파일명`으로 컴파일한 후 `gdb 파일명`을 쳐서 디버깅을 시작함.   
@@ -177,6 +179,7 @@ cs50 라이브러리에 있는 도구 설명하는 섹션
 코드의 디자인이 중요한 이유: 나중에 유지보수할때 코드를 이해할 수 있어야 함.  
 
 cf. 고무오리: 계속 버그가 발생하고 해결할 수 없을때. 잠시 휴식을 취하고 다른거 하다가 고무오리에게 코드를 한줄씩 설명해보자. 
+
 
 ## 4. 배열 (1)
 ### 1. RAM과 자료
