Update 3.1. 3단원 추가.md

--- a/CS50/3.1. 3단원 추가.md
+++ b/CS50/3.1. 3단원 추가.md
@@ -19,20 +19,20 @@
   
 이 함수는 문자열을 다 분리할 때가지 반복해서 호출해야 하는데, 아래와 같이 호출해야 한다.
 
-char* ptr = strtok("Monkey&D&Luffy", "&");
+`char* ptr = strtok("Monkey&D&Luffy", "&");`
 
 strtok은 구분자 &를 찾아 \0(널 문자)로 바꾸고 Monkey를 가리키는 포인터를 반환한다.
 이제 또 함수를 호출해야 하는데, 첫 번째 인자를 NULL이 되어야 한다. 특이하다
 
-strtok(NULL, "&");
+`strtok(NULL, "&");`
 
 그러면 함수는 D&Luffy에서 구분자 &를 찾고, \0으로 바꾸고, D를 가리키는 포인터를 반환한다.
 
-strtok(NULL, "&");
+`strtok(NULL, "&");`
 
 남은 문자열은 Luffy\0이기 때문에 Luffy를 가리키는 포인터를 반환한다
 
-strtok(NULL, "&");
+`strtok(NULL, "&");`
 
 남은 문자열이 없기 때문에 함수는 NULL을 반환한다.
 
@@ -50,7 +50,7 @@ for(char *p="12&345"; char *s=strtok(p,"&"); p=NULL) {printf("%s  ",s);
 :pushpin: **8단원** 명령행 인자는 프로그램의 확장성에 어떤 도움이 될까요? 구체적인 예시를 떠올려보세요.
 1. 프로그램의 확장성
 **문제**: 시스템의 데이터 양, 트래픽 양, 복잡도가 증가하면서 이를 처리할 수 있는 방법이 있어야 한다.
-**확장성**: 확장성은 부하가 증가해도 좋은 성능을 유지하기 위한 전략을 의미한다. 그리고 **증가한 부하에 대처하는 시스템 능력을 설명하는데 사용하는 용어**이기도 하다. **시스템이 특정 방식으로 커지면 이에 대처하기 위한 선택은 무엇인가?, 추가 부하를 다루기 위해 계산 자원을 어떻게 투입할까?**와 같은 질문을 고려한다는 의미이다. 
+**확장성**: 확장성은 부하가 증가해도 좋은 성능을 유지하기 위한 전략을 의미한다. 그리고 **증가한 부하에 대처하는 시스템 능력을 설명하는데 사용하는 용어**이기도 하다. **시스템이 특정 방식으로 커지면 이에 대처하기 위한 선택은 무엇인가?, 추가 부하를 다루기 위해 계산 자원을 어떻게 투입할까?** 와 같은 질문을 고려한다는 의미이다. 
 <details markdown="1">
 <summary> 자세한 설명 보기 </summary>
 
@@ -76,4 +76,6 @@ for(char *p="12&345"; char *s=strtok(p,"&"); p=NULL) {printf("%s  ",s);
 잘은 모르지만..
 명령행 인자는 가장 상위 단계(프로그램을 가동시키기 전에 인자 입력)에서 입력되는 정보이다. 따라서 함수 프로토타입을 int main()을 입력하기 전에 선언해서 본문에서 편하게 사용자 정의 함수를 사용하는 것과 마찬가지로, 코드가 어떻게 확장되거나 변형되는지와 관계없이 명령행 인자 값을 편히 사용할 수 있다. 이런 점이 확장성에 도움이 된다고 생각한다. 
 
- 
+ ##2. 참고 사이트
+ 1. [CS50 Manual Pages](https://manual.cs50.io/): C에서 쓰는 라이브러리와 그 함수를 정리해놓은 곳. 초보자 맞춤형이다.
+ 2. [Style Guide for C - CS50](https://cs50.readthedocs.io/style/c/): 바람직한 코드 디자인을 알려줌
