Update 3.1. 3단원 추가.md

--- a/CS50/3.1. 3단원 추가.md
+++ b/CS50/3.1. 3단원 추가.md
@@ -79,3 +79,23 @@ for(char *p="12&345"; char *s=strtok(p,"&"); p=NULL) {printf("%s  ",s);
  ## 2. 참고 사이트
  1. [CS50 Manual Pages](https://manual.cs50.io/): C에서 쓰는 라이브러리와 그 함수를 정리해놓은 곳. 초보자 맞춤형이다.
  2. [Style Guide for C - CS50](https://cs50.readthedocs.io/style/c/): 바람직한 코드 디자인을 알려줌
+
+## 3. 단원평가
+#### 7. 아래와 같은 main 함수를 지니는 edwith.c 코드소스를 작성하고 컴파일했습니다. '$ ./edwith hello world'를 실행하였을 때 argc의 값은 무엇일까요?
+```
+int main(int argc, string argv[])
+{
+	...
+}
+```
+답: 3
+풀이: argv = [./edwith, hello, world]이므로 argc=3
+#### 10. 다음 중 문자열(string)이 메모리에 저장되는 방식에 대한 설명으로 틀린 것은 무엇인가요?
+1. 문자열(string)은 포함된 문자(char) 개수만큼의 메모리 자리를 차지한다.
+2. 문자열(string)의 각 문자(char)는 메모리상에 연이어서 저장된다.
+3. 문자열(string)은 문자(char)의 배열로 저장된다.
+4. 문자열(string)의 끝에는 널(NULL) 종단문자가 포함된다. 
+
+답: 1번
+풀이: 문자열은 [포함된 문자 + 1]개만큼의 메모리 자리를 차지한다. (널 종단문자 포함)
+
