--- a/CS50/4. 알고리즘.md
+++ b/CS50/4. 알고리즘.md
@@ -264,12 +264,200 @@ For i from 0 to n-2 until no swaps
 불가능하다. 
 
 ## 7. 재귀 (Recursion)
+:pushpin: **핵심 개념: 재귀, 스택**
 :pushpin: 재귀는 재용이가 회사에서 자주 사용하는 알고리즘이다.
+
 ==재귀==: **함수가 본인 스스로를 호출**해서 사용하는 것. 또는 쉽게 설명하자면 눈에 보이는 혹은 가상의 물체의 구조를 **그 물체 자체**를 이용해서 설명하는 것. ex. 3단짜리 피라미드는 **2단짜리 피라미드**에 한 줄을 추가해서 만든 것이다.
 주의: 시작점에 대해서는(ex. 0단짜리 피라미드) 내가 직접 이건 특별한 경우이므로 아무것도 하지 말고 재귀적으로 자기 자신을 호출하지 않도록 처리해야 한다. 
 
 ### 1. 반복문을 중첩해서 피라미드 출력하기
+피라미드 모양은 이렇다
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/SWbnSAK9Io.png" />
 ```
-#include <cs50.h>
+#include  <cs50.h>
+#include  <stdio.h>
 
+void  draw(int  h);
 
+int  main(void)
+{
+	// 피라미드 높이 입력받아 저장
+	int  height = get_int("Height: ");
+	// 피라미드 그리기
+	draw(height);
+}
+
+void  draw(int  h)
+{
+	for (int  i = 1; i <= h; i++)
+	{
+		for (int  j = 1; j <= i; j++)
+		{
+			printf("#");
+		}
+		printf("\n");
+	}
+}
+```
+### 2. 재귀를 사용해 피라미드 그리기
+#### 1. 재귀함수의 구조
+```
+1. 함수를 종료하는 조건
+2. 함수 호출 (ex. draw(h-1)) 
+3. 함수 동작문
+// 1, 2, 3의 순서는 경우에 따라 바뀔 수 있지만 대략적으로 이렇게 생겨먹음. 
+```
+#### 2. 코드 그림으로 설명
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/pBjW13Fkj4.png"/>
+
+#### 3. 피라미드 그리기 코드 
+```
+#include  <cs50.h>
+#include  <stdio.h>
+
+void  draw(int  h);
+
+int  main(void)
+{
+	int  height = get_int("Height: ");
+	draw(height);
+}
+
+void  draw(int  h)
+{
+	// 높이가 0이라면 함수 종료(아무것도 출력하지 않음)
+	if(h == 0)
+	{
+		return;			//return의 역할
+	}
+	
+	// h-1층 피라미드를 그린다.
+	draw(h-1);
+
+	// 폭이 h인 피라미드 한 층을 밑에 그린다.
+	for (int  i = 0; i < h; i++)
+	{
+		printf("#");
+	}
+	printf("\n");
+}
+```
+이렇게 재귀를 사용하면 중첩 루프를 사용하지 않고도 하나의 함수로 동일한 작업을 수행할 수 있다. 
+:pushpin: 함수에서 return의 역할 4.1. 부록에 따로 정리해놨으니 꼭 보기
+
+### 3. 재귀를 이용해 시그마값 구하기
+
+$$\displaystyle\sum_{i=1}^{n} t_i$$ 
+```
+int sigma(int n)
+{
+	if (n <= 0)
+	{
+		return;
+	}
+	return (n + sigma(n-1));
+}
+```
+### 4. ==스택==
+ 재귀함수에서 동일한 함수를 계속해서 호출할 대마다 **함수를 위한 메모리가 계속해서 할당된다**. 이 때 사용되는 메모리를 **스택**이라고 한다. 
+ 스택에는 함수에서 사용되는 변수와 같은 값들이 저장된다. 재귀함수를 이용하면 함수가 종료되지 않은 상태에서 함수가 새로 호출되는데, 이 때마다 새로운 값들이 스택에 저장된다. 따라서 잘못하면 스택 공간이 초과되어 프로그램 충돌이 발생(Stackoverflow)한다.
+ 메모리 사용 문제 때문에 재귀는 유의해서 사용해야하지만, 특정 자료구조(트리 및 연결리스트)를 다룰 때 유용하게 사용된다.
+ <img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/nzHIhhWREn.png"/>
+ 
+
+### 5. 생각해보기
+:bulb: 반복문을 쓸 수 있는데도 재귀를 사용하는 이유는 무엇일까요?
+재귀함수는 반복문보다 코드를 더 간결하게 쓸 수 있어 다른사람이 읽었을 때 이해하기 쉽고, 유지보수도 쉽기 때문이다.
+
+[Recursion and Looping]("https://www.baeldung.com/cs/recursion-looping") 읽어보기 
+<details>
+<summary>  반복문 vs 재귀 부분 요약 </summary>
+
+1. 속도: 반복문이 우수 (재귀는 반복적으로 함수를 호출하기 때문에 느리다)
+2. 메모리: 반복문이 우수 (재귀는 함수를 호출할 때마다 각 함수의 local variables와 parameters를 저장하기 위해 function call stack을 사용해야 함. 이는 메모리에 많은 부담을 주며 잘못하면 스택오버플로우가 생길수도 있음) 
+3. 코드: 재귀가 우수 (반복문은 코드가 길고 복잡해서 장기적으로 유지보수할 때 불리하다 - 코드를 읽고 이해하기 불편함)
+4. 반복문을 쓸지 재귀를 쓸지 판단하는 기준
+	-  **Design Complexity**: 가장 중요한 기준. 만약 문제가 복잡하고 반복적인 것이면 Divide and conquer 방법으로 접근한다. 이 때 재귀함수를 사용하는 것이 유리함
+	- **사용하는 언어**: JAVA, C, Python(imperative language)에서는 반복문이 더 유리함(재귀의 경우 함수를 계속 새로 호출하기 때문). C와 같은 functional language에서는 재귀함수가 더 유리함(tail recursion같은 특정 재귀함수가 사용된 경우 함수를 반복해서 호출하지 않기 때문). 
+	- **시간/공간 제약**: 제약이 있는 상태라면 반복문을 사용하는게 나음
+	- **코드 유지보수**: 재귀가 나음
+</details>
+
+## 8. 병합정렬 (Merge sort)
+:pushpin: **핵심개념: 병합 정렬, 분할 정복**
+### 1. 병합정렬 원리
+==병합정렬==은 원소가 한 개가 될 때까지 계속해서 반으로 나누다가 다시 합쳐나가며 정렬을 하는 방식. 이 과정은 재귀적으로 구현된다. 
+#### 1. 의사코드
+```
+// Base case: hard code
+If only one item
+	Return
+// 정렬
+Else
+	Sort left half of items
+	Sort right half of items
+	Merge sorted halves
+```
+#### 2. 동작 방식
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/qj3Cv1I6Mx.gif"/>
+애니메이션에서 볼 수 있듯이, 나눠진 배열을 병합할 때는 가장 작은 원소를 왼쪽에 배치하는 방식으로 병합한다. 
+
+## 2. O(n log n)
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/meck9nmg5R.png" />
+
+1. 주어진 배열은 총 $$log_8 2$$회 나누어진다. 
+2. 각 단계에서 컴퓨터는 총 8개의 원소를 검사해 대소관계를 따지고 순서대로 정렬한다.
+3. 따라서 작업의 횟수는 총 $$8  log_8 2$$회다. 
+
+일반화하면 병합정렬의 실행시간의 상한은 O(n log n)이다.
+
+## 3. Ω(n log n)
+
+병합정렬의 실행시간의 하한 역시 Ω(n log n)이다. 병합정렬은 숫자들이 이미 정렬되었는지 여부에 관계 없이 나누고 병합하기 때문이다. (무식함)
+
+## 4. Θ(n log n)
+어떤 알고리즘의 실행시간의 상한 = 하한일 때 Θ 사용하면 됨
+- Θ(n^2)			: selection sort
+- Θ(n log n)		: merge sort
+- Θ(n)
+- Θ(log n)
+- Θ(1)
+
+cf. 버블정렬: 정렬이 다 된 상태라면 버블정렬을 중단한다는 조건문을 추가한다면 실행시간의 하한은 Ω(n^2)에서 Ω(n)으로 바뀐다. 
+
+## 5. ==분할 정복== (Divide and Conquer)
+### 1. 개념
+분할 정복은 여러 알고리즘의 기본이 되는 해결방법으로, 크고 방대한 문제를 조금씩 나눠가면서 용이하게 풀 수 있는 문제 단위로 나눈 다음, 그것들을 다시 합쳐서 해결하는 개념이다. 대표적으로는 **퀵소트**나 **병합정렬**이 있다. 
+<img src = "https://namu.wiki/jump/tMRzosRFj5Nq5dM4As4Ls1TxHXBRTz9XLHxdZMdCrHUW%2BqI%2FiwirLfMi9OxGlOQ4" />
+### 2. 적용 방식
+```
+function F(x)
+	if F(x)가 간단
+		return
+	else
+		x를 x1, x2로 분할
+		F(x1), F(x2) 호출
+		return [F(x1)와 F(x2) 병합한 값]
+```
+"F(x)가 간단"이라는 조건을 만족할 때까지 문제를 쪼개서 값을 구하고 병합해 전체 문제를 해결하는 개념이다. 
+### 3. 장단점
+#### 1. 장점
+병렬적으로 문제를 해결하는데 강점이 있음
+#### 2. 단점
+재귀적 함수 호출로 인한 오버헤드가 발생하며, 스택에 다양한 데이터를 보관하고 있어야 하므로 스택 오버플로우가 발생하거나, 과도한 메모리 사용을 하게 됨
+"F(x)가 간단"이라는 조건이 무엇이냐에 따라 알고리즘의 퍼포먼스가 생각보다 꽤 차이나게 됨 (Base case를 정의하는 것의 난해함)
+
+## 6. 생각해보기
+:bulb: 병합 정렬을 선택 정렬이나 버블 정렬과 비교했을 때 장단점은? 
+[참고](https://madplay.github.io/post/time-complexity-space-complexity)
+||선택정렬|버블정렬|병합정렬|
+|---|---|---|---|
+|공간복잡도|O(1)|O(1)|O(n)|
+|최선 시간복잡도|Θ(n^2)|Θ(n^2)|Θ(nlogn)|
+<details>
+<summary> cf. 공간복잡도 </summary>
+프로그램을 실행시킨 후 완료하는 데 필요로 하는 자원 공간의 양을 뜻한다. `총 공간 요구 = 고정 공간 요구 + 가변 공간 요구` (시간과 공간은 반비례함 -> 알고리즘의 척도는 시간복잡도를 위주로 판단한다. 즉, 시간복잡도만 괜찮다면 공간복잡도는 어느 정도 이해해줌)
+</details>
+
+1. 장점: 선택정렬, 버블정렬과 비교했을 때 작업속도가 빠르다
+2. 단점: 더 많은 메모리를 사용한다
