--- a/CS50/4. 알고리즘.md
+++ b/CS50/4. 알고리즘.md
@@ -1,7 +1,7 @@
 # 4. 알고리즘
 ## 1. 검색 알고리즘
 ### 1. 선형 검색 (Linear search)
-(배열이 정리되어 있지 않은 경우) 배열의 인덱스를 처음부터 끝까지 하나씩 증가시키면서 방문해 그 값이 속하는지 검사
+(배열이 정리되어 있지 않은 경우) 배열의 인덱스를 처음부터 끝까지 하나씩 증가시키면서 방문해 그 값이 속하는지 검사  
 <의사코드>
 ```
 For i from 0 to n-1
@@ -14,7 +14,7 @@ Return false
 (배열이 정리된 경우) 중간 인덱스부터 검색 시작
 1. 찾는 값 < 찾은 값: 작은(왼쪽) 인덱스 검색
 2. 찾는 값 > 찾은 값: 큰 (오른쪽) 인덱스 검색
-수업 첫 시간에 예시로 들었던 전화번호부에서 Mike Smith찾기와 비슷함
+수업 첫 시간에 예시로 들었던 전화번호부에서 Mike Smith찾기와 비슷함  
 <의사코드>
 ```
 If no items
@@ -50,12 +50,12 @@ Else if 50 > middle item
 	- Ω(1)			: 선형검색, 이진검색
 
 ### 3. 생각해보기
-:bulb: 실행시간의 상한이 낮은 알고리즘과 하한이 낮은 알고리즘 중 뭐가 더 좋을까?
+:bulb: 실행시간의 상한이 낮은 알고리즘과 하한이 낮은 알고리즘 중 뭐가 더 좋을까?  
 상한이 낮은 알고리즘이 좋다. 최악의 경우를 가정했을 때 가장 빠르게 실행되는 알고리즘을 써야 더 안정적이기 때문이다.
  
 ## 3. 선형 검색 (Linear Search)
 :pushpin: **키워드: 선형검색, 구조체**
-1. ==선형검색==
+1. <mark>선형검색</mark>
 원하는 원소가 발견될 때까지 처음부터 마지막 자료까지 차례대로 검색한다.
 2. 효율성, 비효율성
 	- 선형검색 알고리즘은 정확하지만 매우 비효율적이다.
@@ -89,7 +89,7 @@ int  main(void)
 
 ### 2. 문자열 자료에서 선형검색하기
 C에서는 `names[i] == "EMMA"`와 같이 관계연산자 `==`은 문자열(string)에 사용할 수 없다. EMMA는 여러 문자(char)의 배열이기 때문에 각 문자열이 같은지 알고싶으면 문자열 속의 문자를 하나씩 비교해야 한다. (JAVA나 Python에서는 가능하지만 C는 로우레벨 언어이기 때문에 안됨)
-C에서 문자열을 비교하려면 string.h의 **strcmp(string1, string2)**를 사용하면 된다.(두 문자열이 같을 때 0 반환)
+C에서 문자열을 비교하려면 string.h의 **strcmp(string1, string2)** 를 사용하면 된다.(두 문자열이 같을 때 0 반환)
 ```
 #include  <cs50.h>
 #include  <stdio.h>
@@ -115,7 +115,7 @@ int  main(void)
 	1. 전화번호를 string처리 하는 이유: 전화번호 안에는 -나 +처럼 숫자가 아닌 것들도 들어감. 그리고 정수형 자료는 0으로 시작되는 숫자에서 앞의 0은 없애버리는데 전화번호에서 앞의 0이 빠지면 곤란해짐
 	2. 이 경우에는 names 배열과 numbers 배열이 서로 같은 인덱스를 가져야 한다는 한계가 있다. 만약 이 상태에서 names의 배열을 알파벳 순서로 정렬해버린다면 이름과 잘못된 번호가 연결된다. 
 
-### 3. 새로운 자료형으로 ==구조체==(structure) 정의하기
+### 3. 새로운 자료형으로 <mark>구조체</mark> (structure) 정의하기
 ```
 #include  <cs50.h>
 #include  <stdio.h>
@@ -165,13 +165,13 @@ int  main(void)
 	5.  person이라는 이름의 구조체를 자료형으로 정의하고 person 자료형의 배열을 선언하면 그 안에 포함된 속성값은 '.'으로 연결해서 접근할 수 있다. 
 
 ### 4. 생각해보기
-:bulb: 전화번호부와 같이 구조체를 정의하여 관리 및 검색을 하면 편리한 예는 또 무엇이 있을까요?
+:bulb: 전화번호부와 같이 구조체를 정의하여 관리 및 검색을 하면 편리한 예는 또 무엇이 있을까요?  
 주민등록번호, 학번, 학점 등 두 가지 이상의 정보를 묶어서 관리해야하는 정보.
 
 ## 4. 버블 정렬 (Bubble Sort)
 ### 1. 정의 
 정렬되지 않은 숫자를 정렬하는 방법은 어떤 것이 있을까?
-==버블 정렬==은 두 개의 인접한 자료 값을 비교하면서 위치를 교환하는 방식으로 정렬하는 방법이다. 간단하지만 단 하나의 요소를 정렬하기 위해 너무 많이 교환하는 낭비가 발생한다. 
+<mark>버블 정렬</mark> 은 두 개의 인접한 자료 값을 비교하면서 위치를 교환하는 방식으로 정렬하는 방법이다. 간단하지만 단 하나의 요소를 정렬하기 위해 너무 많이 교환하는 낭비가 발생한다. 
 <img src = "https://gmlwjd9405.github.io/images/algorithm-bubble-sort/bubble-sort.png"/>
 
 ### 2. 의사 코드
@@ -214,7 +214,7 @@ O(log n) < O(n) < O(n^2)이므로 이진탐색이 가장 효율적인 것으로 
 
 ## 5. 선택 정렬 (Selection Sort)
 ### 1. 정의
-==선택정렬==은 가장 작은 값을 찾아 선택한 후 왼쪽의 값과 교환하는 과정을 반복해서 정렬하는 방법이다.
+<mark>선택정렬</mark> 은 가장 작은 값을 찾아 선택한 후 왼쪽의 값과 교환하는 과정을 반복해서 정렬하는 방법이다.
 선택정렬은 알고리즘이 단순하며, 사용할 수 있는 메모리가 제한적인 경우에 사용시 성능상의 이점이 있다.
 <img src = "https://gmlwjd9405.github.io/images/algorithm-selection-sort/selection-sort.png"/>
 ```
@@ -223,9 +223,9 @@ For i from 0 to n-1
 	Swap smallest item with i'th item
 ```
 ### 2. O(n^2)
-n + n-1 + ... + 2 + 1 = n(n+1) / 2
-								  = n^2/2 + 1/2
-								  = O(n^2)
+n + n-1 + ... + 2 + 1 = n(n+1) / 2  
+								  = n^2/2 + 1/2  
+								  = O(n^2)  
 
 :pushpin: 시간복잡도 Θ(n^2)인 정렬 알고리즘 중에서 선택 정렬은 버블 정렬보다 항상 우수하다.
 
@@ -260,19 +260,20 @@ For i from 0 to n-2 until no swaps
 안쪽 루프에서 교환이 하나도 일어나지 않을 때(즉, 이미 정렬이 잘 된 경우) 루프를 멈추도록 하는 것이다. 따라서 최선의 경우 처음부터 정렬이 되어있다면 n번만 작업하면 정렬이 완료됨 => **Ω(n)**
 
 ### 4. 생각해보기
-:bulb: 선택정렬의 실행시간의 하한도 더 단축시킬 수 있을까?
+:bulb: 선택정렬의 실행시간의 하한도 더 단축시킬 수 있을까?  
 불가능하다. 
 
 ## 7. 재귀 (Recursion)
-:pushpin: **핵심 개념: 재귀, 스택**
-:pushpin: 재귀는 재용이가 회사에서 자주 사용하는 알고리즘이다.
+:pushpin: **핵심 개념: 재귀, 스택**  
+:pushpin: 재귀는 재용이가 회사에서 자주 사용하는 알고리즘이다.  
 
-==재귀==: **함수가 본인 스스로를 호출**해서 사용하는 것. 또는 쉽게 설명하자면 눈에 보이는 혹은 가상의 물체의 구조를 **그 물체 자체**를 이용해서 설명하는 것. ex. 3단짜리 피라미드는 **2단짜리 피라미드**에 한 줄을 추가해서 만든 것이다.
+<mark>재귀</mark> : **함수가 본인 스스로를 호출**해서 사용하는 것. 또는 쉽게 설명하자면 눈에 보이는 혹은 가상의 물체의 구조를 **그 물체 자체**를 이용해서 설명하는 것.   
+ex. 3단짜리 피라미드는 **2단짜리 피라미드**에 한 줄을 추가해서 만든 것이다.  
 주의: 시작점에 대해서는(ex. 0단짜리 피라미드) 내가 직접 이건 특별한 경우이므로 아무것도 하지 말고 재귀적으로 자기 자신을 호출하지 않도록 처리해야 한다. 
 
 ### 1. 반복문을 중첩해서 피라미드 출력하기
-피라미드 모양은 이렇다
-<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/SWbnSAK9Io.png" />
+피라미드 모양은 이렇다  
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/SWbnSAK9Io.png" />  
 ```
 #include  <cs50.h>
 #include  <stdio.h>
@@ -342,8 +343,10 @@ void  draw(int  h)
 	printf("\n");
 }
 ```
-이렇게 재귀를 사용하면 중첩 루프를 사용하지 않고도 하나의 함수로 동일한 작업을 수행할 수 있다. 
-:pushpin: 함수에서 return의 역할 4.1. 부록에 따로 정리해놨으니 꼭 보기
+이렇게 재귀를 사용하면 중첩 루프를 사용하지 않고도 하나의 함수로 동일한 작업을 수행할 수 있다.   
+  
+:pushpin: 함수에서 return의 역할   
+4.1. 부록에 따로 정리해놨으니 꼭 보기
 
 ### 3. 재귀를 이용해 시그마값 구하기
 
@@ -358,18 +361,19 @@ int sigma(int n)
 	return (n + sigma(n-1));
 }
 ```
-### 4. ==스택==
- 재귀함수에서 동일한 함수를 계속해서 호출할 대마다 **함수를 위한 메모리가 계속해서 할당된다**. 이 때 사용되는 메모리를 **스택**이라고 한다. 
- 스택에는 함수에서 사용되는 변수와 같은 값들이 저장된다. 재귀함수를 이용하면 함수가 종료되지 않은 상태에서 함수가 새로 호출되는데, 이 때마다 새로운 값들이 스택에 저장된다. 따라서 잘못하면 스택 공간이 초과되어 프로그램 충돌이 발생(Stackoverflow)한다.
- 메모리 사용 문제 때문에 재귀는 유의해서 사용해야하지만, 특정 자료구조(트리 및 연결리스트)를 다룰 때 유용하게 사용된다.
+### 4. <mark>스택</mark>  
+ 재귀함수에서 동일한 함수를 계속해서 호출할 대마다 **함수를 위한 메모리가 계속해서 할당된다**. 이 때 사용되는 메모리를 **스택**이라고 한다.   
+ 스택에는 함수에서 사용되는 변수와 같은 값들이 저장된다. 재귀함수를 이용하면 함수가 종료되지 않은 상태에서 함수가 새로 호출되는데, 이 때마다 새로운 값들이 스택에 저장된다. 따라서 잘못하면 스택 공간이 초과되어 프로그램 충돌이 발생(Stackoverflow)한다.  
+ 메모리 사용 문제 때문에 재귀는 유의해서 사용해야하지만, 특정 자료구조(트리 및 연결리스트)를 다룰 때 유용하게 사용된다.  
  <img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/nzHIhhWREn.png"/>
  
 
 ### 5. 생각해보기
-:bulb: 반복문을 쓸 수 있는데도 재귀를 사용하는 이유는 무엇일까요?
+:bulb: 반복문을 쓸 수 있는데도 재귀를 사용하는 이유는 무엇일까요?  
 재귀함수는 반복문보다 코드를 더 간결하게 쓸 수 있어 다른사람이 읽었을 때 이해하기 쉽고, 유지보수도 쉽기 때문이다.
 
-[Recursion and Looping]("https://www.baeldung.com/cs/recursion-looping") 읽어보기 
+[Recursion and Looping]("https://www.baeldung.com/cs/recursion-looping") 읽어보기   
+ 
 <details>
 <summary>  반복문 vs 재귀 부분 요약 </summary>
 
@@ -386,7 +390,7 @@ int sigma(int n)
 ## 8. 병합정렬 (Merge sort)
 :pushpin: **핵심개념: 병합 정렬, 분할 정복**
 ### 1. 병합정렬 원리
-==병합정렬==은 원소가 한 개가 될 때까지 계속해서 반으로 나누다가 다시 합쳐나가며 정렬을 하는 방식. 이 과정은 재귀적으로 구현된다. 
+<mark>병합정렬</mark> 은 원소가 한 개가 될 때까지 계속해서 반으로 나누다가 다시 합쳐나가며 정렬을 하는 방식. 이 과정은 재귀적으로 구현된다. 
 #### 1. 의사코드
 ```
 // Base case: hard code
@@ -425,10 +429,10 @@ Else
 
 cf. 버블정렬: 정렬이 다 된 상태라면 버블정렬을 중단한다는 조건문을 추가한다면 실행시간의 하한은 Ω(n^2)에서 Ω(n)으로 바뀐다. 
 
-## 5. ==분할 정복== (Divide and Conquer)
+## 5. <mark>분할 정복</mark> (Divide and Conquer)
 ### 1. 개념
-분할 정복은 여러 알고리즘의 기본이 되는 해결방법으로, 크고 방대한 문제를 조금씩 나눠가면서 용이하게 풀 수 있는 문제 단위로 나눈 다음, 그것들을 다시 합쳐서 해결하는 개념이다. 대표적으로는 **퀵소트**나 **병합정렬**이 있다. 
-<img src = "https://namu.wiki/jump/tMRzosRFj5Nq5dM4As4Ls1TxHXBRTz9XLHxdZMdCrHUW%2BqI%2FiwirLfMi9OxGlOQ4" />
+분할 정복은 여러 알고리즘의 기본이 되는 해결방법으로, 크고 방대한 문제를 조금씩 나눠가면서 용이하게 풀 수 있는 문제 단위로 나눈 다음, 그것들을 다시 합쳐서 해결하는 개념이다. 대표적으로는 **퀵소트**나 **병합정렬**이 있다.  
+<img src = "https://velog.velcdn.com/images/ryan_yonghyun/post/de08a9a1-2625-4b7d-adc9-b3025c41e388/image.png" />
 ### 2. 적용 방식
 ```
 function F(x)
@@ -444,11 +448,11 @@ function F(x)
 #### 1. 장점
 병렬적으로 문제를 해결하는데 강점이 있음
 #### 2. 단점
-재귀적 함수 호출로 인한 오버헤드가 발생하며, 스택에 다양한 데이터를 보관하고 있어야 하므로 스택 오버플로우가 발생하거나, 과도한 메모리 사용을 하게 됨
+재귀적 함수 호출로 인한 오버헤드가 발생하며, 스택에 다양한 데이터를 보관하고 있어야 하므로 스택 오버플로우가 발생하거나, 과도한 메모리 사용을 하게 됨  
 "F(x)가 간단"이라는 조건이 무엇이냐에 따라 알고리즘의 퍼포먼스가 생각보다 꽤 차이나게 됨 (Base case를 정의하는 것의 난해함)
 
 ## 6. 생각해보기
-:bulb: 병합 정렬을 선택 정렬이나 버블 정렬과 비교했을 때 장단점은? 
+:bulb: 병합 정렬을 선택 정렬이나 버블 정렬과 비교했을 때 장단점은?    
 [참고](https://madplay.github.io/post/time-complexity-space-complexity)
 ||선택정렬|버블정렬|병합정렬|
 |---|---|---|---|
