--- a/CS50/4. 알고리즘.md
+++ b/CS50/4. 알고리즘.md
@@ -432,7 +432,7 @@ cf. 버블정렬: 정렬이 다 된 상태라면 버블정렬을 중단한다는
 ## 5. <mark>분할 정복</mark> (Divide and Conquer)
 ### 1. 개념
 분할 정복은 여러 알고리즘의 기본이 되는 해결방법으로, 크고 방대한 문제를 조금씩 나눠가면서 용이하게 풀 수 있는 문제 단위로 나눈 다음, 그것들을 다시 합쳐서 해결하는 개념이다. 대표적으로는 **퀵소트**나 **병합정렬**이 있다.  
-<img src = "https://velog.velcdn.com/images/ryan_yonghyun/post/de08a9a1-2625-4b7d-adc9-b3025c41e388/image.png" />
+<img src = "https://velog.velcdn.com/images/ryan_yonghyun/post/de08a9a1-2625-4b7d-adc9-b3025c41e388/image.png" width="500"/>
 ### 2. 적용 방식
 ```
 function F(x)
