--- a/CS50/4. 알고리즘.md
+++ b/CS50/4. 알고리즘.md
@@ -212,6 +212,9 @@ O(log n) < O(n) < O(n^2)이므로 이진탐색이 가장 효율적인 것으로 
 - Ω(log n)
 - Ω(1)				: linear search, binary search
 
+#### 3. Ω(n)  
+만약 운좋게 자료가 다 정리되어서 첫번째 회차에 한 번도 교환이 발생하지 않았다면 정렬을 멈추는 알고리즘을 도입한다고 하자. 그렇게 되면 컴퓨터는 자료를 n-1회 검사하고 정렬을 끝낼 것이므로 이 때 최적의 경우의 작업수는 Ω(n)이 된다.     
+
 ## 5. 선택 정렬 (Selection Sort)
 ### 1. 정의
 <mark>선택정렬</mark> 은 가장 작은 값을 찾아 선택한 후 왼쪽의 값과 교환하는 과정을 반복해서 정렬하는 방법이다.
