--- a/CS50/4. 알고리즘.md
+++ b/CS50/4. 알고리즘.md
@@ -213,7 +213,7 @@ O(log n) < O(n) < O(n^2)이므로 이진탐색이 가장 효율적인 것으로 
 - Ω(1)				: linear search, binary search
 
 #### 3. Ω(n)  
-만약 운좋게 자료가 다 정리되어서 첫번째 회차에 한 번도 교환이 발생하지 않았다면 정렬을 멈추는 알고리즘을 도입한다고 하자. 그렇게 되면 컴퓨터는 자료를 n-1회 검사하고 정렬을 끝낼 것이므로 이 때 최적의 경우의 작업수는 Ω(n)이 된다.     
+만약 운좋게 자료가 다 정리되어서 첫번째 회차에 한 번도 교환이 발생하지 않았다면 정렬을 멈추는 알고리즘을 도입한다고 하자. 그렇게 되면 컴퓨터는 자료를 n-1회 검사하고 정렬을 끝낼 것이므로 이 때 버블정렬의 최적의 경우의 작업수는 Ω(n)이 된다.     
 
 ## 5. 선택 정렬 (Selection Sort)
 ### 1. 정의
