--- a/CS50/4. 알고리즘.md
+++ b/CS50/4. 알고리즘.md
@@ -375,7 +375,8 @@ int sigma(int n)
 :bulb: 반복문을 쓸 수 있는데도 재귀를 사용하는 이유는 무엇일까요?  
 재귀함수는 반복문보다 코드를 더 간결하게 쓸 수 있어 다른사람이 읽었을 때 이해하기 쉽고, 유지보수도 쉽기 때문이다.
 
-[Recursion and Looping]("https://www.baeldung.com/cs/recursion-looping") 읽어보기   
+[Recursion and Looping](https://www.baeldung.com/cs/recursion-looping)
+
  
 <details>
 <summary>  반복문 vs 재귀 부분 요약 </summary>
