--- a/CS50/5. 메모리.md
+++ b/CS50/5. 메모리.md
@@ -218,6 +218,7 @@ for문 전에 선언되어서 for문 안에서 조작된(ex. `i++`) 변수는 fo
 ex. `int i=0` -> `for문 안에서 i++로 인해 i=5로 조작됨` -> `for문 빠져나가도 i=5임.`
 
 ## 5. 문자열 복사
+📌**핵심 단어: malloc**
 ### 1. 문자열 복사하기 1 (망한 예시)
 ```
 #include  <stdio.h>
@@ -271,7 +272,7 @@ int  main(void)
 이제 프로그램에 emma를 입력하고 프로그램을 돌리면 s는 emma로, t는 Emma로 출력된다. 
 
 - 주석
-	1. malloc(할당할 메모리 크기): memory allocation(메모리 할당) 함수. 정해진 크기 만큼 메모리를 할당한다. 위의 경우 s 문자열의 길이에 널 종단 문자(\0)에 해당하는 1을 더한 만큼 메모리를 할당한다. 
+	1. <span style = 'background-color: #fff5b1'>malloc</span>(할당할 메모리 크기): memory allocation(메모리 할당) 함수. 정해진 크기 만큼 메모리를 할당한다. 위의 경우 s 문자열의 길이에 널 종단 문자(\0)에 해당하는 1을 더한 만큼 메모리를 할당한다. 
 	2. `for (int i = 0; i < strlen(s)+1; i++)`이라고 쓰면 비효율적이다. 조건문에 함수를 쓰게 되면 루프를 돌 때마다 함수를 호출하고 조건을 검사하게 되어 시간이 오래 걸리기 때문이다. 이때 `n = strlen(s)`라고 함수의 값을 변수로 저장하게 되면 조건검사시 함수를 호출할 필요가 없어 더 빨라진다. 
 	3. 조건식에서 i < n+1인 경우: \0의 자리까지 고려해야 하기 때문이다. 
 
