--- a/CS50/5. 메모리.md
+++ b/CS50/5. 메모리.md
@@ -302,7 +302,270 @@ int  main(void)
 
 ### 4. 생각해보기
 :bulb: 배운 바와 같이 메모리 할당을 통해 문자열을 복사하지 않고, 단순히 문자열의 주소만 복사했을 때는 어떤 문제가 생길까요?   
-사본의 문자열을 수정하는 것으로 착각하지만 사실은 원본의 문자열을 수정하게되는 참사가 일어난다. 
+사본의 문자열을 수정하는 것으로 착각하지만 사실은 원본의 문자열을 수정하게되는 참사가 일어난다.  
+
+## 6. 메모리 할당과 해제
+:pushpin: **핵심 단어: valgrind, free**
+### 1. malloc과 free 
+malloc을 사용해 5byte의 메모리를 할당한 아래 코드를 보자
+```c
+#include  <stdio.h>
+#include  <cs50.h>
+#include  <ctype.h>
+#include  <string.h>
+#include  <stdlib.h>   //malloc이 들어있음
+
+int  main(void)
+{
+	char *s = get_string("s: ");
+	char *t = malloc(strlen(s)+1);
+
+	for (int  i = 0, n = strlen(s); i < n+1; i++)
+	{
+		t[i] = s[i];
+	}
+
+	t[0] = toupper(t[0]);
+	printf("%s\n", s);
+	printf("%s\n", t);
+}
+```
+**malloc**은 할당한 메모리의 첫 바이트의 주소(포인터)를 반환하는 함수이다. 
+malloc 함수를 이용해 메모리를 할당한 뒤에는 **free**라는 함수를 이용해 메모리를 해제해줘야 한다. 그렇지 않으면 메모리에 저장한 값은 **쓰레기 값**으로 남게 되어 메모리 용량의 낭비(**메모리 누수**)가 발생하기 때문이다. 
+[동적 메모리 할당에 대한 비디오 참고](https://www.youtube.com/watch?v=_8-ht2AKyH4&ab_channel=mycodeschool) 
+<details>
+<summary> **free()를 써야 하는 이유** </summary>
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/tFYsI1WX9c.gif"/>
+</details>
+
+### 2. valgrind를 이용해 오류찾기
+**valgrind**라는 프로그램을 사용하면 우리가 작성한 코드에서 메모리와 관련된 문제가 있는지 확인할 수 있다. 터미널 창에
+```
+valgrind ./filename
+```
+을 치면 다음과 같은 결과가 나온다. 
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/G9ybjnQvas.png"/>
+여기에서 핵심적인 내용은
+```
+5bytes in 1 blocks are definitely lost in loss record 1 of 1
+```
+이다. 즉, malloc으로 할당된 5바이트가 free를 통해 해제되지 않아서 메모리 누수가 생기고 있다는 뜻이다. 이제 코드의 마지막째 줄에 (더 이상 malloc으로 할당된 메모리가 필요없을 때) free(t)를 써서 메모리 할당을 없앤 후 valgrind를 통해 검사하면 다음과 같이 오류가 없다고 나온다. 
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/NM7FWrLJIz.png"/>
+```
+All heap blocks were freed -- no leaks are possible
+```
+### 3. 버퍼 오버플로우와 메모리 누수
+다음 코드를 보자
+```c
+#include <stdlib.h>
+
+void f(void)
+{
+    int *x = malloc(10 * sizeof(int));
+    x[10] = 0;
+}
+
+int main(void)
+{
+    f();
+    return 0;
+}
+```
+valgrind를 써서 위 코드를 검사해보면
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/6lFXPTxQkT.png"/>
+위와 같이 길게 에러를 설명하는 내용이 뜬다. 여기서 주목해야 할 것은 
+```
+1. Invalid write of size 4
+2. 40 bytes in 1 blocks are definitely lost in loss record 1 of 1
+```
+두 내용인데 이는 각각 다음과 같은 뜻이다. 
+1. 코드에서는 정수 10개만을 위한 메모리를 할당했는데, x[10]을 통해 11번째 자리에 0을 할당하려고 했기 때문에 **버퍼 오버플로우** 발생
+2. malloc을 통해 메모리를 할당한 후 free로 할당을 해제하지 않았기 때문에 **메모리 누수** 발생 
+
+위 오류들은 `x[9]=0`으로 고치고 void f(void)코드의 마지막 줄에 `free(x)`를 쓰면 해결된다. 
+### 4. 생각해보기
+:bulb: 제한된 메모리를 가지고 프로그래밍을 할 때 메모리를 해제하지 않으면 어떤 문제가 발생할 수 있을까요?  
+해제하지 않은 메모리가 쌓여서 결국 스택오버플로우가 발생한다.
+
+## 7. 메모리 교환, 스택, 힙
+:pushpin: **핵심 단어: 스택, 힙, 포인터**
+### 1. 입력된 두 정수를 바꾸는 함수 swap을 작성해보자
+```c
+#include  <stdio.h>
+
+void  swap(int  a, int  b);
+
+int  main(void)
+{
+	int  x = 1;
+	int  y = 2;
+	printf("x is %i, y is %i\n", x, y);
+	swap(x,y);
+	printf("x is %i, y is %i\n", x, y);
+}
+
+void  swap(int  a, int  b)
+{
+	int  tmp = a;
+	a = b;
+	b = tmp;
+}
+```
+프로그램을 실행하면 에러는 안뜨지만 x와 y의 값이 바뀌지 않는다는 것을 알 수 있다. 왜 그럴까? 
+그 이유는 함수 swap에서 a와 b는 각각 x와 y의 값을 복제해서 가지기 때문에, 함수 실행시 a와 b의 값이 바뀌지, x와 y의 값이 바뀌는 것이 아니기 때문이다. 
+아래 영상을 보자
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/SdhGa8abuw.gif"/>
+
+### 2. 메모리의 구조
+위의 영상에서 메모리의 이미지가 나오는데 위에서부터 Machine code, Global, Heap, Stack이라고 써져 있다. 하나씩 알아보자
+#### 1. Machine code (코드 영역)
+메모리의 맨 위쪽에는 clang과 같은 컴파일러가 코드를 컴파일한 후 나온 0과 1의 값들이 저장된다. 
+#### 2. Globals (데이터 영역)
+머신코드 아래에는 프로그램이 실행되는 내내 적용되는 전역 변수(global variables)들이 저장된다
+#### 3. Heap (힙 영역)
+malloc과 같은 동적 할당 함수를 통해 사용자가 할당받을 수 있는 메모리 영역이다. 정보가 위에서 아래로 저장된다. 이 영역은 컴퓨터가 자동으로 관리해주지 않기 때문에 메모리의 할당/해제를 사용자가 직접 관리해줘야 한다. 잘못 관리하면 메모리 누수, 스택오버플로우와 같은 문제들이 생긴다. 
+#### 4. Stack (스택 영역)
+함수를 호출했을 때 함수에서 사용하는 지역변수(local variables)들을 저장하는 공간이다. 함수가 종료되면 stack에 저장된 변수들도 자동적으로 지워진다. 
+
+[**스택오버플로우란?**](https://mer1.tistory.com/33)
+그림에서 보이듯이 스택과 힙은 같은 공간에서 서로 다른 방향으로 관리되는데, 만약 저장되는 데이터를 잘 관리하지 못해서 힙 영역과 스택 영역이 만나는 경우 스택오버플로우가 발생한다.
+### 3. 포인터를 이용해 swap을 작성해보자
+ ```c
+ #include  <stdio.h>
+  
+void  swap(int *a, int *b);
+
+int  main(void)
+{
+	int  x = 1;
+	int  y = 2;
+	printf("x is %i, y is %i\n", x, y);
+	swap(&x, &y);
+	printf("x is %i, y is %i\n", x, y);
+}
+
+void  swap(int *a, int *b)
+{
+	int  tmp = *a;
+	*a = *b;
+	*b = tmp;
+}
+```
+ 이 코드를 돌리면 x와 y의 값이 정상적으로 바뀌는 것을 확인할 수 있다.
+ 작동 원리는 다음과 같다
+ <img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/pyLYJPAY9M.gif"/>
+ a와 b를 각각 x와 y를 가리키는 **포인터로 지정**함으로서 문제를 해결한 것이다. 
+ 
+### 4. 생각해보기
+:bulb: 메모리 영역을 다양하게 나누는 이유는 무엇일까요?  
+각 메모리에 저장되는 데이터의 종류가 다른데(코드, 전역변수, 지역변수, 사용자가 필요할 때마다 동적으로 할당하는 메모리), 이 데이터들이 저장되고 지워지는 시기는 저마다 다르다. 한 영역에서 이 모든 데이터를 관리하려면 곤란한 일이 생기므로(ex. 지워야 할 데이터가 지우면 안되는 데이터 밑에 깔려있다던지..) 메모리를 여러 영역으로 나눠서 데이터를 따로 관리하는 것이 편하다. 
+[메모리 구조를 알아보자](https://beenii.tistory.com/111)
+
+## 8. 파일 쓰기
+:pushpin: **핵심 단어: scanf, fopen, fprintf, fclose**
+### 1. 메모리 구조
+- 머신코드 영역: 프로그램이 실행될 때 그 프로그램이 컴파일된 바이너리가 저장됨
+- 글로벌 영역: 프로그램 안에서 저장된 전역 변수가 저장됨
+- 힙 영역: malloc으로 동적 할당된 메모리의 데이터가 저장된다.
+- 스택 영역: 프로그램 내 함수와 관련된 것들이 저장됨. 
+<img src = "https://cs50.harvard.edu/x/2020/notes/4/memory_layout.png"/>  
+힙 영역에서는 **malloc에 의해 메모리가 더 할당될수록** 점점 사용하는 메모리의 범위가 아래로 늘어난다.  
+스탱 영역에서는 **함수가 더 많이 호출될수록(재귀함수 등)** 사용하는 메모리의 범위가 점점 위로 늘어난다.  
+이렇게 늘어나다가 제한된 메모리 용량 하에서 힙과 스택이 서로의 영역을 침범하는 상황이 발생할 때도 있는데, 이를 **힙 오버플로우**, **스택 오버플로우**라고 하며, 이 둘을 뭉뚱그려서 **버퍼 오버플로우**라고 한다. 
+ 
+
+### 2. scanf: 컴퓨터에 정보를 입력해보자
+#### 1. `char *s;` 
+```c
+#include  <stdio.h>
+
+int  main(void)
+{
+	char *s = NULL; //string s와 동일.
+	printf("s: ");
+	scanf("%s", s); // 주석 참고
+	printf("s: %s\n", s);
+}
+```
+이 상태로 사용하면 "variable s is uninitialized when used here"이라는 에러가 뜸. 즉 문자열 변수 s를 만들고 싶다면 변수 s를 주소로 초기화해야 함  
+- 주석: **scanf("형식지정자", &변수 이름)** 을 쓰는게 정석이나 s는 이미 포인터(주소)이므로 굳이 &를 쓸 필요가 없음. 그리고 앞에서 만든 swap과 마찬가지로 앞서 정의한 변수들로 뭐를 하려는 함수들은 포인터를 써서 이 변수들을 관리해야 함. 그 이유는 swap()만들기에서 이미 배웠다..
+#### 2. `char *s = NULL;`
+```c
+#include  <stdio.h>
+
+int  main(void)
+{
+	char *s = NULL; 
+	printf("s: ");
+	scanf("%s", s); 
+	printf("s: %s\n", s);
+}
+```
+`char *s = NULL` -> NULL은 특별한 포인터로, 가리키는 곳이 없다는 뜻임.
+이 코드를 돌리면 `s: (null)`이라는 글자가 출력된다. 여기서 null은 입력받은 문자열이 저장될 메모리 공간이 할당되지 않았다는 뜻이다.
+
+#### 3.  `char *s[5];`
+```c
+#include  <stdio.h>
+
+int  main(void)
+{
+	char s[5]; //사용자가 EMMA를 입력한다고 가정하고 \0(널 문자)까지 고려해 크기 5의 문자 배열을 선언
+	printf("s: ");
+	scanf("%s", s);  //s의 주소를 scanf에 전달해서 사용자의 입력을 받음
+	printf("s: %s\n", s);
+}
+```
+여태까지 배운 내용을 보면 **배열과 포인터는 사실 연관되어 있다**     
+배열은 메모리가 연속적으로 할당된 공간이다.    
+문자열은 문자가 연속적으로 있는 것이다. **문자열은** 사실 그 메모리 공간 첫 번째 바이트의 **주소를 의미**한다.   
+따라서 추이적 관계에 의해 최소한 이 문맥에서 포인터는 배열과 같다고 볼 수 있다.    
+clang 컴파일러는 문자 배열의 이름을 포인터처럼 다룬다. 따라서 scanf에서 `&`를 붙이지 않고 s를 쓰는 것이다 `scanf("%s", s)`     
+위의 코드를 실행해서 s에 EMMA를 입력하면 정상적으로 프로그램이 돌아가지만 Emma Humphrey를 적으면 프로그램이 동작하지 않는다.(프로그램이 멈추거나 세그멘테이션 오류 발생) 그 이유는 문자열 s의 길이를 5로 제한해뒀기 때문이다 (사실 널 문자를 빼면 입력할 수 있는 문제는 딱 4글자임)
+#### 4. 주의: scanf는 에러체크를 하지 못함
+scanf는 에러 확인을 하지 못한다. 즉, `scanf("%i", &a)`로 정수형을 입력받아야하는데, 사용자가 문자를 입력했다면 에러가 나고 프로그램이 멈춘다. 따라서 scanf를 사용할 때는 사용자가 제대로 된 정보를 입력했는지 에러를 확인하는 과정을 거쳐야 한다. 
+
+### 2. 파일에 정보 저장하기
+```c
+#include  <stdio.h>
+#include  <cs50.h>
+#include  <string.h>
+
+int  main(void)
+{
+FIlE *file = fopen("phonebook2.csv", "a"); //fopen() 참고
+
+char *name = get_string("Name: ");
+char *number = get_string("Number: ");
+
+fprintf(file, "%s,%s\n", name, number); //fprintf() 참고
+
+fclose(file); //fclose() 참고
+}
+```
+#### 1. fopen("파일명.csv", "작업 종류")
+`FIlE *file = fopen("phonebook2.csv", "a");`
+1. FILE이라는 새로운 자료형을 가리키는 포인터변수 file을 만들었다.
+2. fopen은 첫번째 인자로 열고 싶은 파일 이름, 두 번째 인자로 r(read), w(write), a(append)를 받는다.
+3. 우리의 목표는 전화번호부 프로그램을 만들어 사용자로부터 이름과 번호를 입력받아 텍스트 파일에 덧붙이는 것이다.
+4. fopen은 해당 파일을 가리키는 포인터를 반환한다.
+5. csv: 쉼표로 분리된 값(comma separated variable)으로, 간단한 엑셀이나 Numbers같은 프로그램으로 열 수 있는 파일 형식이다. 
+
+#### 2. fprintf(파일명, "입력하는 문자열")
+파일용 printf로 파일에 출력할 수 있다.
+
+#### 3. fclose(파일명)
+파일을 닫는다. 
+
+#### 4. 프로그램 실행 결과
+이 프로그램을 실행한 후 정보를 입력하고 터미널창에 `ls`를 입력해보면 phonebook2.csv라는 파일이 새로 생긴 것을 볼 수 있다. 이걸 vscode에서 열어본 후 phonebook2.c를 실행해서 정보를 입력하면 실시간으로 정보가 업데이트되는 것을 볼 수 있다. 이 파일을 다운로드할 수도 있다. 
+
+### 3. 생각해보기
+:bulb: get_long, get_float, get_char도 비슷한 방식으로 직접 구현할 수 있을까요?   
+scanf("형식지정자", &변수명)에서 형식지정자만 바꿔주면 된다.   
+long: %ld  
+float: %f  
+char: %c  
 
 
 
