--- a/CS50/5. 메모리.md
+++ b/CS50/5. 메모리.md
@@ -567,6 +567,77 @@ long: %ld
 float: %f  
 char: %c  
 
+## 9. 파일 읽기
+:pushpin: **핵심 단어: JPEG, fread**
+:pushpin: 학습 전 복습해야 할 내용: [3단원 8. 명령행 인자](https://github.com/Elenaljh/TIL/blob/main/CS50/3.%20%EB%B0%B0%EC%97%B4.md)
+### 1. JPEG파일인지 검사하는 프로그램
+```c
+// 파일이름: jpeg.c
+include  <stdio.h>
+
+int  main(int  argc, char *argv[])
+{
+	//Ensure user ran program with two words
+	if (argc != 2) 
+	{
+		return  1;
+	}
+
+	// Open file
+	FILE *file = fopen(argv[1], "r"); 
+	if (file == NULL) 
+	{
+		return  1; 
+	}
+ 
+	// Read 3 bytes(24bits) from file
+	unsigned  char  bytes[3]; 
+	fread(bytes, 3, 1, file); 
+ 
+	// Check if bytes are 0xff 0xd8 0xff
+	if (bytes[0] == 0xff && bytes[1] == 0xd8 && bytes[2] == 0xff)
+	{
+		printf("Maybe its JPEG file\n"); //JPEG파일이기 위한 조건이 더 있는 것 같음(..?)
+	}
+	else
+	{
+		printf("No");
+	}
+}
+```
+#### 1. Ensure user ran program with two words
+에러체크: 사용자가 프로그램의 이름(./jpeg) 말고 파일명도 입력하길 바람
+#### 2. Open file
+1. `FILE *file = fopen(argv[1], "r");` 
+	- 기대하는 사용자입력: `./jpeg  파일경로/cat.jpg` -> 파일명(`파일경로/cat.jpg`)은 두번째 인자이므로 argv[1]이다.
+	- 파일을 읽을 것이므로 함수의 두번째 인자는 "r"이라고 쓴다.
+2. `if (file == NULL)`: 에러체크. fopen, malloc, get_string과 같은 함수는 에러가 생기면 NULL이라는 값을 돌려줌. 여기서 문제가 생기면 1을 반환하고 프로그램 종료
+#### 3. Read 3 bytes(24bits) from file
+1. `unsigned  char  bytes[3];` 
+	- `unsigned char`: -128부터 128이 아닌 0부터 255 범위의 값 (원리 설명은 없었음. 코드 동작을 위해 일단 이렇게 쓴다고 했음)
+
+2. `fread(bytes, 3, 1, file);`: 함수 인자로 **배열, 읽을 바이트 수, 읽을 횟수, 읽을 파일** 입력
+
+#### 4. Check if bytes are 0xff 0xd8 0xff
+1. JPEG 형식에 관한 설명 문서를 보면 모든 JPEG 파일의 첫 세 바이트는 무조건 ff, d8, ff로 시작한다. 이와 같은 규칙을 이용해 파일이 JPEG인지 알 수 있다.
+2. JPEG파일이기 위한 조건 (**magic number**)
+	- **Common segment: FF D8**
+		- 이 뒤에 2개 더 붙음 
+		- 포토샵 등 편집 프로그램으로 생성/수정 된 파일: FF D8 FF E0
+		- 핸드폰 카메라, DSLR 등 카메라로 찍은 파일: FF D8 FF E1
+		- 결론: 앞 세자리 **FF D8 FF**는 항상 동일하다.
+	- **Trailer: FF D9**
+	- FF D8 ~ FF D9 사이에 얼마나 많은 값이 있느냐에 따라 파일의 용량이 정해진다. 
+	- [JPEG의 파일구조](https://jyj850714.tistory.com/375)
+
+### 2. 생각해보기
+:bulb: JPEG 외에 다른 파일 형식도 그 형식임을 알려주는 약속이 있을까요?  
+[매직넘버(Magic number)](https://namu.wiki/w/%EB%A7%A4%EC%A7%81%EB%84%98%EB%B2%84#s-4)
+: 파일 형식을 식별하기 위해 파일 맨 앞에 붙이는 특정 값이다. 물론 16진수로 표현된다. 위키피디아에 검색해보면 파일 확장자별로 매직넘버를 잘 정리해놓았으니 참고.   
+
+
+
+
 
 
 
