--- a/CS50/6. 자료구조.md
+++ b/CS50/6. 자료구조.md
@@ -174,3 +174,11 @@ int  main(void)
 1. 이미 할당받은 기존 메모리 덩어리를 새롭게 가져오고 원래보다 크든 작든 새롭게 설정된 크기로 바꾸는 일을 한다.  
 2. realloc은 기존 배열에서 새로운 배열로 데이터를 복사해주고, 기존 메모리는 자동으로 해제해줌-free(기존 배열)
 3. 우리들은 뭔가 잘못되지는 않았는지(realloc이 NULL값을 반환하는지) 체크하고 잘못된 것이 없다면 새로운 배열에 새로운 값을 추가적으로 저장하면 됨
+
+### 4. 생각해보기
+:bulb: 이미 할당된 메모리의 크기를 조절할 때 임시 메모리를 새로 할당해줘야 하는 이유는 무엇인가요?  
+만약 임시변수(tmp)를 안만들고 바로 list = malloc~~ 이라는 코드를 넣으면 기존 정보는 포인터를 잃고 컴퓨터 메모리 안을 떠돌게 된다. 그럼 우린 이제 그 정보들을 찾을 수 없게 된다..
+
+## 3. 연결 리스트: 도입
+:pushpin: **핵심 단어: 연결 리스트**  
+:pushpin: **복습: [구조체](https://github.com/Elenaljh/TIL/blob/main/CS50/4.%20%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md), [포인터](https://github.com/Elenaljh/TIL/blob/main/CS50/5.%20%EB%A9%94%EB%AA%A8%EB%A6%AC.md)  
