--- a/CS50/6. 자료구조.md
+++ b/CS50/6. 자료구조.md
@@ -181,4 +181,4 @@ int  main(void)
 
 ## 3. 연결 리스트: 도입
 :pushpin: **핵심 단어: 연결 리스트**  
-:pushpin: **복습: [구조체](https://github.com/Elenaljh/TIL/blob/main/CS50/4.%20%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md), [포인터](https://github.com/Elenaljh/TIL/blob/main/CS50/5.%20%EB%A9%94%EB%AA%A8%EB%A6%AC.md)  
+:pushpin: **복습: [구조체](https://github.com/Elenaljh/TIL/blob/main/CS50/4.%20%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md), [포인터](https://github.com/Elenaljh/TIL/blob/main/CS50/5.%20%EB%A9%94%EB%AA%A8%EB%A6%AC.md)**  
