--- a/CS50/6. 자료구조.md
+++ b/CS50/6. 자료구조.md
@@ -182,3 +182,93 @@ int  main(void)
 ## 3. 연결 리스트: 도입
 :pushpin: **핵심 단어: 연결 리스트**  
 :pushpin: **복습: [구조체](https://github.com/Elenaljh/TIL/blob/main/CS50/4.%20%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md), [포인터](https://github.com/Elenaljh/TIL/blob/main/CS50/5.%20%EB%A9%94%EB%AA%A8%EB%A6%AC.md)**  
+
+### 1. 데이터 구조란
+데이터구조는 우리가 컴퓨터 메모리를 더 효율적으로 관리하기 위해 새로 정의하는 구조체(structure)이다. C에서 자료구조(데이터구조)는 아래 3가지 문법으로 이뤄진다.
+|문법|설명|
+|---|---|
+|struct|구조체. 비트맵이나 비트맵 헤더 등과 관련된 문제에서도 구조체 사용|
+|.|구조체의 속성값에 접근할 때 사용|
+|*|역참조 연산자|
+
+### 2. 연결 리스트 (Linked list)
+#### 1. 배열
+배열은 **1. 데이터 수정시 느리**지만 **2. 데이터에 접근할 때는 빠르**다.
+우선, 배열의 길이를 늘리거나 줄이기 위해서는 앞에서 배운대로 malloc이나 realloc을 이용해 메모리를 새로 할당받고, 기존 배열의 내용을 복사해서 새로운 배열에 붙여넣은 후 새 내용을 추가하거나 지우고, 마지막으로 기존 배열은 free를 통해 메모리를 해제시켜줘야 한다. 이 과정의 시간복잡도는 **O(n)**으로 느리다.  
+그러나, 배열은 쉽게 인덱싱할 수 있어 값에 접근하는 것이 쉽고 빠르다. 또한 **랜덤 접근**이라는 방법으로 일정한 시간에 값에 접근할 수 있다(**constant time access**). 이런 면에서 배열은 매우 빠르다. 
+<details>
+<summary> **constant time access란?** </summary>
+
+"Every point in array is accessible in *constant* time."   
+우리는 배열에 포인터(메모리 주소)로 접근한다. 즉, 주소를 알기만 하면 별다른 과정을 거치지 않고도 바로 그 곳으로 갈 수 있는 것이다. 예를 들면  
+`a[3] == *(location of a + n*sizeof(int))`  
+인 것이다. 따라서 배열의 어느 위치에 접근해도 동일한 시간(constant time)이 소요된다.  
+이에 반해 **연결 리스트(Linked list)** 는 데이터의 수에 따라 값에 접근하는 시간이 달라진다 (**accessible in "linear" time.**). 연결 리스트에서 n번째 값에 접근하기 위해서는 n-1개의 원소를 거쳐야 하기 때문이다.
+</details>
+
+#### 2. 연결 리스트
+<img src = "https://cs50.harvard.edu/x/2020/notes/5/linked_list_with_addresses.png"/>
+연결 리스트의 형태는 위와 같다. 연결 리스트의 값들은 배열처럼 값이 서로 붙어있지 않다.(따라서 배열처럼 대괄호[]를 사용해 값에 접근할 수 없다.)   
+
+메모리의 빈 공간에 여기저기 값이 흩어져 있는 대신, **하나의 값**에는 **다음 값의 주소(포인터)** 가 붙어있는 것이 **연결 리스트의 특징**이다. 포인터의 역할은 연결 리스트의 각 값을 연결하는 것이며, 리스트의 **맨 마지막 값에는 NULL 포인터**가 붙어있다.   
+
+<details>
+<summary> **참고: NULL과 NUL** </summary> 
+
+|종류|자료형|특징|
+|---|---|---|
+|NULL|pointer|값: 0x0|
+|NUL|char|\0(널문자)|
+</details>
+
+위 그림에서 값+포인터를 저장한 두 칸이 한 덩어리로 그려져 있는데, 이 덩어리를 **node**라고 한다. 
+
+### 3. 구조체로 연결 리스트 정의하기
+
+<details>
+<summary>구조체 복기</summary>
+
+```c
+typedef struct
+{
+	string name;
+	string number;
+}
+person;
+```
+person이라는 자료형을 만들었었음. 구조체의 멤버 변수(member variable)은 name과 number임.
+각 멤버 변수에는 `person.name`, `person.number`과 같이 `.`을 사용해 접근한다. 
+</details> 
+
+연결 리스트는 아래 코드와 같이 간단한 구조체로 정의할 수 있다.
+
+```c
+typedef struct node  //struct node: 구조체의 정식 명칭 (formal name of structure)
+{
+    int number;
+    struct node *next; //next라는 포인터는 node structure을 가리키도록 정의됨
+}
+node; //구조체의 별명(alias). typedef가 하는 일은 프로그램의 다른 부분에서 사용하기 쉽도록 node를 node structure의 별칭으로 사용하도록 정의하는 것이다. (It gives you an alias from struct node to just 'node')
+```
+node라는 이름의 구조체는 number와 *next 두 개의 필드가 함께 정의되어 있다.  
+number은 **각 노드가 가지는 값**, *next는 **다음 node를 가리키는 포인터**가 된다.   
+여기에서 `typedef struct` 대신 `typedef struct node`라고 'node'를 함께 명시해주는 것은, 구조체 안에서 node를 사용하기 위해서이다. 
+
+<details>
+<summary> 참고 </summary>
+
+```c
+typedef struct x
+{
+	int number;
+	struct x *next;
+}
+node;  //struct x의 별칭
+```
+이런 식으로 코드를 작성해도 위의 struct node를 정의한 것과 동일한 결과가 나온다. 
+</details>
+
+
+
+
+
