--- a/CS50/6. 자료구조.md
+++ b/CS50/6. 자료구조.md
@@ -268,6 +268,59 @@ node;  //struct x의 별칭
 이런 식으로 코드를 작성해도 위의 struct node를 정의한 것과 동일한 결과가 나온다. 
 </details>
 
+### 4. 생각해보기 
+:bulb: 연결 리스트를 배열과 비교했을 때 장단점은 무엇이 있을까요?    
+**데이터의 접근, 탐색이 중요하다면 배열을 쓰자.**  
+**데이터의 추가, 삭제가 중요하다면 연결리스트를 쓰자.**  
+
+#### 1. 배열 vs 연결리스트
+||배열|연결 리스트|
+|---|---|---|
+|개념|**정적(static)인 자료구조**로, **연속된 메모리 주소**를 할당받음. **스택**에 메모리가 할당됨. **크기 수정이 불가**하고, 배열 크기 이상의 데이터 저장 불가. 그러나 데이터가 **순차적으로 저장**되기 때문에 인덱스를 사용할 수 있어 **임의 접근(random access)** 가 가능해짐|크기를 정할 필요가 없어 **동적(dynamic)인 자료구조**임. **힙**에 메모리가 할당됨. 메모리 상 흩어진 노드들의 묶음인데, 각 노드에는 데이터와 다음 데이터를 가리키는 포인터(메모리 주소)가 저장됨. **크기에 제한이 없어 데이터 추가, 삭제가 굉장히 자유롭다**. 그러나 배열처럼 연속적인 메모리 주소를 할당받지 않기 때문에 **임의접근이 불가능**하고, **순차 접근(sequential access)** 방식으로 데이터를 탐색함. 트리구조를 만들때 많이 사용됨.|
+|읽기|O(1)|O(N)|
+|검색|O(N)|O(N)|
+|삽입|O(N)/ 앞:O(N), 뒤:O(1)|O(N)/앞:O(1) , 뒤:O(N)|
+|삭제|O(N)/ 앞:O(N), 뒤:O(1)|O(N)/앞:O(1) , 뒤:O(N)|
+1. 읽기: 배열은 인덱스(주소)만 찾아가면 되므로 딱 한 단계만 필요하고, 연결 리스트에서는 각 노드를 거치면서 주소를 찾아야 하므로 최악의 경우 N단계가 필요함. 
+2. 검색: 검색은 어떤 데이터를 찾고 그 인덱스를 얻는 것이다. 배열과 리스트 모드 검색하고 있는 값을 찾을 때까지 모든 셀(노드)를 확인해야 한다.
+3. 삽입
+	- 배열
+		- 맨 뒤가 아닌 자리에 삽입할 때는 자료를 오른쪽으로 옮겨야 하므로 N단계가 필요함. 
+		- 맨 끝에 자료를 삽입할 때는 단순히 삽입하면 되므로 1단계만 필요
+	- 연결리스트 (데이터 삽입 자체는 O(1))
+		- 맨 앞이 아닌 자리에 삽입할 때는 원하는 자리에 갈때까지의 노드를 거쳐야 하기 때문에 N단계를 거침. 
+		- 맨 앞에 삽입할 때는 그냥 삽입하면 되므로 1단계만 필요.
+4. 삭제
+	- 배열
+		- 맨 뒤를 삭제하는 것은 O(1)
+		- 맨 뒤가 아닌 자료를 삭제할 때는 나머지 데이터를 모두 왼쪽으로 옮겨야 함. O(N)
+	- 연결리스트
+		- 맨 앞을 삭제하는 것은 O(1) 
+		- 맨 앞이 아닌 자료를 삭제할 때는 그 노드까지 가려면 앞의 모든 노드를 거쳐야 함. O(N)
+
+
+연결리스트는 노드 덕분에 데이터의 추가, 삭제로부터 자유롭지만 탐색이 느림  
+배열은 데이터가 연속적이므로 탐색이 빠르지만 데이터의 추가, 삭제로부터 자유롭지 못함. 따라서 결론은 다음과 같다.  
+**데이터의 접근, 탐색이 중요하다면 배열을 쓰자.**  
+**데이터의 추가, 삭제가 중요하다면 연결리스트를 쓰자.**  
+
+cf. 일반적인 알고리즘 문제를 풀 때는 배열이 더 빠르고 편하다.(문제에서 N의 크기가 주어지기 때문) 또한 배열의 크기를 초반에 MAX로 잡는다면 배열이 더 빠르고 편리함(연결리스트는 요소를 삽입, 삭제할 때마다 메모리의 할당, 해제가 일어나는데, **시스템 콜(System call)**을 사용하는 경우 시간이 꽤 소요되기 때문)
+
+#### 2. 연결리스트의 종류
+1. 일반적인 연결리스트 (Linear/Singly linked list)
+	- 뒤로만 탐색 가능
+	- 각 노드에 데이터와 다음 노드의 주소 저장
+2. 이중 연결 리스트 (Doubly linked list)
+	- 전/후로 탐색 가능
+	- 각 노드에 데이터, 이전 노드의 주소, 다음 노드의 주소 저장
+	- 얻고자 하는 데이터의 위치가 tail에 가깝다면 tail에서부터 역방향으로 탐색 가능하기 때문에 탐색시간을 줄일 수 있다. 
+3. 원형 연결 리스트 (Circular linked list)
+	- 마지막 노드가 null을 저장하는 대신 처음 노드의 주소를 저장
+	- head에서부터 순회를 진행하다보면 다시 head로 돌아오는 구조. 
+	- 이중 연결 리스트 + 원형 연결 리스트 = 이중 원형 연결 리스트 
+
+
+
 
 
 
