--- a/CS50/6. 자료구조.md
+++ b/CS50/6. 자료구조.md
@@ -518,6 +518,30 @@ printf("NULL\n");
 :bulb: 연결 리스트의 중간에 node를 추가하거나 삭제하는 코드는 어떻게 작성할 수 있을까요?    
 3번에서 작성한 코드 참고
 
+## 5. 연결 리스트: 시연
+### 1. 연결 리스트의 장점과 단점
+배열과 달리 연결리스트는 새로운 값을 추가할 때 다시 메모리를 할당하지 않아도 된다. 그러나 그 대가로 임의접근(Random access)이 불가하다. 따라서 이진탐색(binary search)도 할 수 없고, 순차적인 탐색(Sequential search)만 가능하다. 
+배열의 경우 정렬되어 있을 때 이진탐색이 가능하기 때문에 **O(log n)** 의 실행시간이 소요된다. 이에 반해 연결리스트는 찾는 것이 나올 때까지 각 위치를 순차적으로 탐색해야 하므로 **O(n)** 의 실행시간이 소요된다. 따라서 데이터를 탐색할 때 연결리스트는 다소 불리하다.
+이처럼 여러 데이터 구조는 각각 장단점이 있으므로 경우에 따라 목적에 부합하는 가장 효율적인 데이터 구조를 고민해서 사용하는 것이 중요하다. 
+
+### 2. 연결 리스트의 node에 사용된 메모리 free하기
+연결리스트를 만든 후 프로그램이 종료되기 전 malloc으로 할당받은 메모리를 모두 free해야 한다. 즉, 연결 리스트의 각 노드들을 모두 해제해야한다는 것이다. 코드는 다음과 같다.
+```c
+//Free list: 연결리스트 만든다고 할당받은 메모리들을 다 free해야 한다. 
+while (list != NULL)
+{
+	node *tmp = list->next;
+	free(list);
+	list = tmp;
+}
+```
+이해 안가면 그려서 이해하셈. 얼마 안걸림. 
+
+### 3. 생각해보기
+:bulb: 배열이 정렬되어 있지 않은 경우의 검색 소요 시간을 연결 리스트의 검색 시간과 비교해보세요.  
+배열이 정렬되어있지 않은 경우 검색시간: O(n)   
+연결리스트의 검색시간: O(n)   
+둘 다 비슷한 수준이다.  
 
 
 
