--- a/CS50/6. 자료구조.md
+++ b/CS50/6. 자료구조.md
@@ -542,6 +542,280 @@ while (list != NULL)
 배열이 정렬되어있지 않은 경우 검색시간: O(n)   
 연결리스트의 검색시간: O(n)   
 둘 다 비슷한 수준이다.  
+	
+
+## 6. 연결 리스트: 트리
+:pushpin:**핵심 단어: 트리, 루트**
+### 1. 이진탐색트리 (Binary Search Tree)
+아래 그림은 **이진탐색트리(Binary Search Tree)** 이다.
+<img src = "https://cs50.harvard.edu/x/2020/notes/5/binary_search_tree.png"/>
+
+맨 위의 노란색 노드에서 트리가 시작되는데, 이 노드를 **루트**라고 한다. 루트 노드가 가리키는 하위 노드들을 **자식 노드**라고 한다. 
+
+**이진 탐색 트리**는 하나의 노드가 2개의 자식 노드를 가지는데, **1. 왼쪽 자식 노드는 자신의 값보다 작고**, **2. 오른쪽 노드는 자신의 값보다 크다**고 **재귀적으로 정의**할 수 있다. 
+따라서 이런 트리 구조는 **이진 검색(Binary Search)** 를 수행하는데 유리하여 검색하는데 소요되는 시간은 **O(log n)** 이다. 또한 포인터를 이용했기 때문에 연결리스트처럼 **역동성**도 가진다. 따라서 이진탐색트리는 탐색시간이 빠른 배열(이진탐색의 경우)의 장점과, 자료의 삽입/삭제가 쉬운 연결리스트의 장점을 모두 가진 자료구조라고 볼 수 있다. 
+
+### 2. 이진검색함수 코드
+(실제로 돌아가는 코드는 아니다.. main()이 없기 때문에..)
+```c
+#include <stdio.h>
+#include <stdbool.h>   //boolean값 여기에 들어있음
+
+//이진검색트리 노드구조체
+typedef  struct  node
+{
+	int  number; //데이터
+	struct  node *right; //오른쪽 자식 노드
+	struct  node *left; //왼쪽 자식 노드
+}
+node;
+
+//이진검색함수 (*tree는 이진검색트리를 가리키는 포인터) - 재귀함수 사용
+bool  search(node *tree) //이 함수는 boolean을 반환한다.
+{
+	//Base case: 트리가 비어있는 경우 false 반환후 함수 종료
+	if (tree == NULL)
+	{
+		return  false;
+	}
+
+	//현재 노드의 값이 50보다 크면 왼쪽 노드 검색
+	else  if (50 < tree->number)
+	{
+		return  search(tree->left);
+	}
+
+	//현재 노드의 값이 50보다 작으면 오른쪽 노드 검색
+	else  if (50 > tree->number)
+	{
+		return  search(tree->right);
+	}
+
+	//위 모든 조건 만족 X == 현재 노드의 값이 50
+	else
+	{
+		return  true;
+	}
+}
+```
+cf. 이진 검색 트리를 활용했을 때 검색 실행 시간과 노드 삽입 시간은 모두 **O(log n)** 이다. 그 이유는 자료가 n개일 때  
+$$\ 트리의 층 = log_2 n$$ 이기 때문이다. 따라서 루트에서 가장 멀리 떨어진 자식노드에 찾고 있는 자료가 있는 최악의 경우에도 **O(logn)** 시간이 소요된다.
+
+### 3. 생각해보기
+:bulb: 값을 검색할 때 이진 검색 트리가 기본 연결 리스트에 비해 가지는 장점과 단점은 무엇이 있을까요?  
+장점: 정렬과 검색이 쉽고 빠르다 (검색 시간복잡도 - BST: O(log n), 연결: O(n))
+단점: 연결리스트에 비해 코드가 복잡하다. 특히 자료를 삭제하거나 메모리를 free하는 과정이 복잡하다. 또한 메모리 공간을 더 많이 차지한다. 
+
+<details>
+<summary> 연결리스트 vs 이진검색트리 </summary>
+
+연결리스트는 이진트리의 일종이라고 한다(자식노드가 1개일 때의 트리)
+||이진검색트리|연결리스트|
+|---|---|---|
+|포인터 수|0~2개|1개|
+|검색|O(log n)-general/ O(n) - worst case|O(n)|
+|삽입|O(log n) - general(balanced)/O(n) - worst case(unbalanced)|O(1)|
+|삭제|O(log n) - general / O(n) - worst case|O(1)|
+|정렬|정렬됨(노드의 왼쪽 트리는 항상 값이 작고 오른쪽 트리는 항상 값이 큼)|정렬X|
+|장점|정렬과 검색이 쉽고 빠르다. 자료간 위계를 표현한다.|적용하기 쉽고 여러 적용사례도 많다.|
+|단점|코드가 복잡하다. 특히 자료를 삭제하는 것이나 memory freeing이 복잡하다.|random access를 필요로 하는 유용한 정렬 알고리즘을 사용할 수 없다. |
+</details>
+
+
+## 7. 해시 테이블
+:pushpin: **핵심 단어: 해시 테이블, 해시 함수**
+### 1. 인트로
+연결리스트나 트리에서는 값을 검색할 때 O(n)또는 O(log n)의 시간이 걸린다. 해시테이블은 이 시간을 더 단축해 검색시간을 거의 O(1)에 가깝게 만들어준다.
+
+### 2. 해시테이블
+해시 테이블은 **'연결 리스트의 배열'** 이다. 즉, 배열의 장점인 random access와 연결리스트의 장점인 dynamism(정해진 크기가 없음)을 모둔 취한 자료구조인 것이다.   
+여러 값들을 몇 개의 바구니에 나눠 담는 상황을 생각해보자. 각 값들은 **'해시 함수'**라는 맞춤형 함수를 통해 어떤 바구니에 담기는지 결정된다. 각 바구니에 담기는 값들은 그 바구니에서 새롭게 정의되는 **연결 리스트**로 이어진다. 이렇게 연결 리스트가 담긴 바구니가 여러 개 있는 것이 '연결 리스트의 배열', 즉 해시테이블이 된다.   
+<img src = "https://velog.velcdn.com/images%2Fjewelrykim%2Fpost%2Febfeab31-1336-4cf4-8dd7-5ead9f13c3e9%2F%E1%84%92%E1%85%A2%E1%84%89%E1%85%B1%E1%84%87%E1%85%A5%E1%84%8F%E1%85%A6%E1%86%BA.001.jpeg" />  
+해시테이블을 사용하는 방법은 간단하다. key를 해시 함수에 넣으면, 해시인덱스(또는 해시코드-non integer value-)가 나오고, 해당 인덱스를 통해 빠르게 데이터를 찾아 들어간다. 
+
+ <img src = "https://cs50.harvard.edu/x/2020/notes/5/hash_table.png"/>    
+ 
+ 위 그림을 보면 세로로 길게 연결된 칸들이 이름이 담길 바구니이다. 각 바구니는 이름의 가장 첫 글자에 따라 분류되는데, 이 때 **이름의 첫 글자가 해시 함수**이다. 이 해시테이블에는 알파벳 개수에 해당하는 총 26개의 **포인터**들이 있고, 각 포인터는 그 알파벳을 시작으로 하는 이름들을 저장하는 **연결리스트를 가리킨다.** H가 담긴 바구니에는 Hermione, Harry, Hagrid로 구성된 연결리스트가 들어있어 다른 연결리스트보다 길다. Vernon은 리스트의 원소가 하나기 때문에 한번에 찾을 수 있지만(각 바구니는 배열을 구성하므로 V 바구니는 O(1), 즉 바로 찾을 수 있다.) Hagrid를 찾으려면 앞의 Hermione, Harry도 검사해야 하므로 3번의 검사과정이 추가적으로 필요하다. 따라서 모든 사람들의 이름이 H로 시작하는 최악의 경우를 생각해본다면 해시테이블의 검색시간은 **O(n)** 으로 늘어날 수 있다. 
+
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/E1MDynIRhI.jpg" width = "400" />  
+
+위의 그림을 보자. 처음과 다르게 이름 분류 기준(또는 해시함수)을 최대한 세세하게 나눈 것이다(이름 첫 두 글자 + a,b,c,d,e..) 이 경우 배열이 차지하는 공간이 많아져서 공간복잡도가 늘어나지만, 한 바구니 안에 이름이 많이 들어가지는 않으므로(**충돌-collision-**이 없다/ 연결리스트가 매우 짧아진다) 이름이 한 개만 들어간 최선의 경우 검색시간은 **O(1)** 까지 줄어들 수 있다.    
+일반적으로는 최대한 많은 바구니를 만드는 해시 함수를 사용하기 때문에 해시테이블의 시간복잡도는 거의 O(1)에 가깝다고 볼 수 있다.  *(해시 테이블은 데이터가 입력되지 않은 여유공간-바구니-가 많아야 제 성능을 유지할 수 있다. 공간 사용률이 70~80%부터 성능 저하가 일어난다.)*
+
+### 3. 좋은 해시함수의 조건
+1. Use only the data being hashed
+2. Use all of the data being hashed
+3. Be deterministic: input값이 같으면 return값도 항상 같아야 함.
+4. Uniformly distribute data: 데이터가 여러 바구니에 골고루 나뉘어 있어야 한다. 즉, 하나의 이름바구니에 모든 이름을 집어넣거나, 특정 바구니에만 쏠리게 넣으면 안된다는 뜻. 
+
+### 3. 충돌(Collision)
+가장 이상적인 해시테이블은 한 버켓(바구니)에 딱 한개의 노드(위의 예시에서는 이름)가 있는 경우이다. 하지만 현실은 그렇게 하기가 힘든데, 한 버켓에 여러개의 노드(이름)가 있는 경우를 충돌이라고 한다.
+충돌을 해결하는데에는 크게 2가지 방법이 있다.   
+
+1. **체이닝(Chaining)**:  각 해시코드에 연결리스트를 저장하는 방법. 그럼 위의 이미지와 같은 자료구조가 탄생한다. 
+	- 개방주소방법의 문제점(clustering, infinite loop 해결)
+	- 해시테이블에 null 상태의 포인터들을 저장. 각 포인터들은 그에 맞는 연결리스트의 주소를 저장한다.   
+	- 만드는 방법 
+	<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/FyWzaDW050.gif" />
+2. **개방주소방법-선형조사 (Linear probing)**: 인덱스에 이미 다른 노드가 있다면 바로 앞뒤의 인덱스(hashcode+1,2,..n)를 탐색해서 빈 인덱스에 삽입하는 방법 $$ h_i(x) = (h(x) + i) mod m $$
+<img src = "https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbhOyKD%2FbtqvdkH4stH%2FNFhZkkw6u9sKkxxzPvRkTk%2Fimg.png" width="400"/>
+	- 장점1. 체이닝처럼 포인터가 필요없고, 지정한 메모리 외 추가적인 저장공간도 필요 없다. 삽입, 삭제시 오버헤드가 적고 저장할 데이터가 적을 때 유리하다.
+	- 문제1. Clustering - 예를 들어 John, Mary, Ethan, Harry,.. 등 여러 이름을 입력한 결과 hashcode가 모두 7이 나왔다고 하자. 그럼 개방주소법에 따라 hashcode 6,8에 저장하고, 5,9에 저장하고.. 이런 과정을 반복하게 된다. 그 결과 데이터가 한 군데에 몰려있게 된다. 이 현상을 clustering이라고 한다. 
+	- 문제2. Infinite loop: 입력 데이터는 100개인데 해시코드는 10개일 경우, 10개의 데이터를 다 입력하면 빈 해시코드는 없게 된다. 그럼 11번째 데이터를 입력하는 과정에서 빈 해시코드를 찾는 코드가 무한루프에 빠지게 된다. 
+3. 개방주소방법 - 이차원조사
+$$\ h_i(x) = (h(x) + i^2) mod m $$ 
+$$\ h_i(x) = (h(x) + c_1i^2 + c_2i)modm$$ 
+<img src = "https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcqK23W%2Fbtqvb5YXW5k%2FlwclKRKKSx3rXfUcHFvIrk%2Fimg.png" width="300"/>
+
+4. 개방주소방법 - 더블 해싱
+$$\ h_i(x) = (h(x) + if(x)) mod m$$ 
+여기서 h(x)와 f(x)는 서로 다른 해시함수다.  f(x)의 값은 해시테이블 크기 m과 서로소여야 한다. 권장: h(x) = x mod m, f(x) = 1+(x mod m)
+
+### 4. 정리
+[출처](https://iq.opengenus.org/time-complexity-of-hash-table/)
+참고: 해시키 계산 - O(1), 인덱스찾기 - O(1)
+#### 1. 시간복잡도 (open addressing)
+-> linear probing
+|작업|best case|average case|worst case|
+|---|---|---|---|
+|삽입|O(1)|O(1)|O(n)|
+|ㄴ|해시키가 빈 인덱스를 가리켜서 그 자리에 바로 자료 삽입|||
+|삭제|O(1)|O(1)|O(n)|
+|ㄴ|계산한 키로 접근한 인덱스에 자료가 있어서 바로 지움|||
+|검색|O(1)|O(1)|O(n)|
+|ㄴ|해시키 계산하고 바로 데이터 찾음||해시맵이 모두 찬 경우, 해시키를 통해 해시맵의 인덱스에 접근했어도 그 자리에 찾는 자료가 없을 수 있음. 이 때 해시맵을 전부 돌아다니면서 자료를 찾아야 함 = O(n) (n=데이터 개수)|
+|공간복잡도|O(n)|O(n)|O(n)|
+
+
+#### 2. 시간복잡도 (chaining)
+O(1) = O(c) = constant time complexity
+|작업|best case|average case|worst case|
+|---|---|---|---|
+|삽입|O(1)|O(1)|O(n)|
+|ㄴ||모든 연결리스트가 동일한 길이 - 따라서 리스트의 마지막 노드에 도달하는 것 = O(1), 그 뒤에 새로운 노드를 추가하면 됨: O(1)|모든 자료가 단 하나의 인덱스의 연결리스트에 저장됨. 그 리스트의 마지막 노드에 가는 것은 O(n). 그 후 삽입 - O(1)|
+|삭제|O(1)|O(1)|O(n)|
+|ㄴ||삭제할 노드에 도달:O(1), 삭제하는 것 자체는 O(1)|모든 자료가 단 하나의 인덱스의 연결리스트에 저장됨. 그 리스트의 마지막 노드에 가는 것은 O(n). 그 후 삽입 - O(1)|
+|검색|O(1)|O(1)|O(n)|
+|ㄴ||연결리스트에서 자료 찾기-O(n/m)=O(c)=O(1) (각 연결리스트의 길이가 같다고 가정. 즉, 모든 연결리스트의 n값은 동일)||
+|공간복잡도|O(m+n)|O(m+n)|O(m+n)|
+m= size of the hash table
+n= number of items inserted
+
+#### 2. 단점
+1. 데이터를 정렬(ordering and sorting)하는데 시간이 많이 걸린다. 
+	- 해시테이블에서 데이터를 정렬하려고 시도하면, 해시테이블 고유의 장점은 잃고 정렬시간이 n에 가까워진다. 
+	- 따라서 데이터 정렬여부가 중요하지 않은 경우에 해시테이블을 사용한다. 
+2. 모든 key type에 대해 강력한 해시함수를 요구하기 때문에 다른 자료구조에 비해 (*좋은* 해시함수를)설계/구현/디버그가 쉽지 않다. 
+
+### 5. 생각해보기
+:bulb: 해시 함수는 어떻게 만들 수 있을까?   
+cf. 조교의 조언: 해시함수는 그냥 인터넷에서 찾아서 써라. 자기만의 해시함수를 만드는건 시간낭비다ㅋㅋ 대신 출처는 표기하셈.   
+해시함수를 만드는 방법은 대표적으로 두 가지 방법이 있다.
+더 많은 방법이 있긴 한데 [여기]
+(https://itwiki.kr/w/%ED%95%B4%EC%8B%9C) 참고. 
+<details>
+<summary> 이것도 보던가 </summary>
+
+1.**자릿수 선택(digit selection)**
+
+: 키값 중, 일부 자릿수 골라내어 인덱스 생성
+
+: h(121234345656) ⇒ 113355 *key값 (예.주민번호) 중 홀수자릿수 선택
+
+2.**자릿수 접기(digit folding)**
+
+: 키값 각각의 자릿수를 더해 인덱스 생성
+
+: h(123456) = 1+2+3+4+5+6 = 21
+
+3.**모듈로 연산(modulo function) - 많이 사용됨.**
+
+: 키를 해쉬테이블의 크기로 나눈 나머지를 인덱스로 생성
+
+: h(157) ⇒ mod(157) = 7 *h(KEY) = KEY MOD TABLESIZE
+
+</details> 
+
+1. **나누기 방법** 
+원소(정수일 경우 그냥 사용, 문자(열)의 경우 아스키코드 사용)를 해시 테이블의 크기로 나누어 나머지의 값을 테이블 주소로 사용해 저장하는 방식. 이 방법은 해시테이블 크기보다 큰 수를 해시 테이블 크기 범위에 들어오도록 수축시킨다.
+$$\ h(x) = xmodm $$
+2. **곱하기 방법**
+입력값을 0과 1 사이의 소수에 대응시킨 후, 해시 테이블 크기 m을 곱해 해시값을 0<h(x)<m에 대응시킨다. 이 방법을 쓰려면 해시함수의 특성을 결정짓는 상수 A(0<A<1)를 미리 준비해야 한다. 
+$$\ h(x) = [m(xA mod 1)] $$
+*(xA mod 1 = xA의 소수부분)*
+<img src = "https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbppJD6%2Fbtqu9zs8IxU%2F66sJpXqKoIFYwJvAmKphxk%2Fimg.png"/>
+
+
+## 8. 트라이 (Trie)
+### 1. 트라이란? 
+트라이는 검색(retrieval)의 줄임말로, 기본적으로 **트리 형태의 자료구조**다. 트리와 구분되는 점은 **각 노드가 배열**로 이루어져있다는 것이다. Hermione, Harry, Hagrid를 저장해보겠다.  
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/tmKtY76OVo.jpg"/>   
+위와 같은 트라이에서 값을 검색하는데 걸리는 시간은 **문자열의 길이**에 한정된다. 다른 자료구조는 저장된 데이터의 양에 비례해 탐색시간이 늘어나지만, 트라이에서 자료를 탐색하는데 걸리는 시간은 데이터의 양과 관계없다. 대신 저장되는 자료의 길이에 따라 결정된다. 만약 트라이에 영어 이름을 저장한다면, 영어 이름의 길이가 k라고 할 때 O(k)≈**O(1)** 의 탐색시간이 걸리는 것이다.
+트라이를 활용하는 대표적인 예는 텍스트 자동완성이다. bat를 치면 컴퓨터는 트라이의 루트를 타고 검색해서 batman, batch, battlenet 등을 추천해준다. 
+
+### 2. 트라이의 장점과 한계
+트라이는 다른 자료구조에 비해 자료를 삽입, 삭제, 검색하는 시간이 매우 빠르다. -> 모두 **O(1)** 
+그러나 트라이는 각 노드가 배열로 구성된 매우 커다란 자료구조이므로, 저장되는 자료의 양에 비해 **메모리를 많이 차지**한다.  -> 공간복잡도 **O(포인터 자체 크기 * 한 노드에 포함된 포인터배열 길이 * 트라이에 존재하는 총 노드의 개수)**
+
+### 3. 해시테이블 vs 트라이
+1. 해시테이블: 키(해시코드)와 값(value)이 1:多의 관계가 될 수 있다(이를 충돌이라고 함) -> 이런 점을 트라이가 보완할 수 있음
+2. 트라이: 키가 unique하다. 즉, 해시테이블과 다르게 키와 값이 1:1관계이므로 충돌이 일어나지 않는다. 또한 그 어떤 데이터도 두 데이터가 동일하지 않은 이상 트라이 내부에서 로드맵이 동일하지 않다. 
+
+### 4. 트라이 만들기
+#### 1. 트라이 구조체 만들기 (키: 설립년도, 값: 대학 이름)
+```
+typedef struct _trie
+{
+	char university[20];
+	struct _trie* paths[10];
+}
+trie;
+```
+#### 2. 트라이에 자료 저장하기
+1636년에 설립된 하버드를 저장해보자 (키:1636, 값:Havard)  
+<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/SbDHmnNIhz.png"/>    
+각 노드를 만들고 포인터로 연결하는 방법은 연결리스트를 만드는 방법과 동일하다. (malloc으로 노드 만들고 포인터로 연결)
+ 
+ 1701년에 설립된 예일을 저장해보자 (키: 1701, 값: Yale)   
+ <img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/s2ZNJ33DZK.png"/>
+
+#### 3. 트라이에서 검색하기
+루트에서 시작해서 주어진 키를 따라갔을 때 null 포인터가 나오면 실패, 자료를 찾으면 성공.
+주의할 점: bat를 찾는데 트리에 저장된 자료는 batch일 수 있음. 근데 batch안에 bat가 있으므로 bat를 찾았다고 착각할 수도 있음. 따라서 꼭 루트의 끝까지 따라간 후에 자기가 진짜 찾는 것이 있는지 확인해야 함. 
+
+### 5. 생각해보기
+:bulb: 트라이와 해시테이블 비교
+[출처](https://kldp.org/node/128037)
+||트라이|해시테이블|
+|---|---|---|
+|검색 속도|O(1)-특히 같은 자료들의 루트가 겹치거나 같은 요청이 반복적으로 들어와서 CPU cache되어 더 빨라짐.|충돌이 없는 경우 O(1)이지만, 충돌이 있을 때 최악의 경우 시간이 O(n)으로 늘어남|
+|충돌(Collision)|없음=> key:value = 1:1|있음=> key:value = 1:多|
+|공간복잡도|O(포인터 자체 크기 * 한 노드에 포함된 포인터배열 길이 * 트라이에 존재하는 총 노드의 개수)|open addressing: O(n), chaining: O(m+n)|
+m: 연결리스트 길이
+n: 자료 개수
+
+## 9. Abstract data structures
+### 1. 큐 (Queues)
+<img src = "https://w.namu.la/s/b7785ff70f623fedbcae126015a3ae0a18b2f3a785bdd691d803aad2b10aee91f7b3fc438aadd3676cb84b9608ac18c4ce4dcc9a35eed34a61a2ffffff9b56eb9573e712ebf83aac6f792f889d7ce2300a53e2e09a92bd4359eea41f88582c90" width="400"/>   
+
+- 선입선출 (FIFO)
+- 배열, 연결리스트를 통해 구현 가능함
+
+### 2. 스택 (Stacks)
+<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Data_stack.svg/300px-Data_stack.svg.png" width = "400" />
+
+- 후입선출 (LIFO)
+- 배열, 연결리스트로 구현
+- ex) 이메일, 식당 트레이
+
+### 3. 딕셔너리 (Dictionaries)
+- **키 - 값**으로 이루어짐
+-  해시테이블과 동일한 개념 (hashkey - value)
+- 키를 어떻게 정의할 것인지가 중요함. 
+
+### 4. 생각해보기
+:bulb: 여태까지 배운 개념들을 기반으로 해서 나만의 새로운 자료 구조를 만들어 볼 수 있을까요?   
+	
 
 
 
