--- a/CS50/6. 자료구조.md
+++ b/CS50/6. 자료구조.md
@@ -656,22 +656,22 @@ $$\ 트리의 층 = log_2 n$$ 이기 때문이다. 따라서 루트에서 가장
 	- 개방주소방법의 문제점(clustering, infinite loop 해결)
 	- 해시테이블에 null 상태의 포인터들을 저장. 각 포인터들은 그에 맞는 연결리스트의 주소를 저장한다.   
 	- 만드는 방법 
-	<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/FyWzaDW050.gif" />
+	<img src = "https://i.esdrop.com/d/f/Hn3cQpRVXY/FyWzaDW050.gif" width = "400"/>
 2. **개방주소방법-선형조사 (Linear probing)**: 인덱스에 이미 다른 노드가 있다면 바로 앞뒤의 인덱스(hashcode+1,2,..n)를 탐색해서 빈 인덱스에 삽입하는 방법 $$ h_i(x) = (h(x) + i) mod m $$
-<img src = "https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbhOyKD%2FbtqvdkH4stH%2FNFhZkkw6u9sKkxxzPvRkTk%2Fimg.png" width="400"/>
-	- 장점1. 체이닝처럼 포인터가 필요없고, 지정한 메모리 외 추가적인 저장공간도 필요 없다. 삽입, 삭제시 오버헤드가 적고 저장할 데이터가 적을 때 유리하다.
-	- 문제1. Clustering - 예를 들어 John, Mary, Ethan, Harry,.. 등 여러 이름을 입력한 결과 hashcode가 모두 7이 나왔다고 하자. 그럼 개방주소법에 따라 hashcode 6,8에 저장하고, 5,9에 저장하고.. 이런 과정을 반복하게 된다. 그 결과 데이터가 한 군데에 몰려있게 된다. 이 현상을 clustering이라고 한다. 
-	- 문제2. Infinite loop: 입력 데이터는 100개인데 해시코드는 10개일 경우, 10개의 데이터를 다 입력하면 빈 해시코드는 없게 된다. 그럼 11번째 데이터를 입력하는 과정에서 빈 해시코드를 찾는 코드가 무한루프에 빠지게 된다. 
-3. 개방주소방법 - 이차원조사
-$$\ h_i(x) = (h(x) + i^2) mod m $$ 
-$$\ h_i(x) = (h(x) + c_1i^2 + c_2i)modm$$ 
-<img src = "https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcqK23W%2Fbtqvb5YXW5k%2FlwclKRKKSx3rXfUcHFvIrk%2Fimg.png" width="300"/>
+<img src = "https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbhOyKD%2FbtqvdkH4stH%2FNFhZkkw6u9sKkxxzPvRkTk%2Fimg.png" width="400"/>  
+	- 장점1. 체이닝처럼 포인터가 필요없고, 지정한 메모리 외 추가적인 저장공간도 필요 없다. 삽입, 삭제시 오버헤드가 적고 저장할 데이터가 적을 때 유리하다.  
+	- 문제1. Clustering - 예를 들어 John, Mary, Ethan, Harry,.. 등 여러 이름을 입력한 결과 hashcode가 모두 7이 나왔다고 하자. 그럼 개방주소법에 따라 hashcode 6,8에 저장하고, 5,9에 저장하고.. 이런 과정을 반복하게 된다. 그 결과 데이터가 한 군데에 몰려있게 된다. 이 현상을 clustering이라고 한다.   
+	- 문제2. Infinite loop: 입력 데이터는 100개인데 해시코드는 10개일 경우, 10개의 데이터를 다 입력하면 빈 해시코드는 없게 된다. 그럼 11번째 데이터를 입력하는 과정에서 빈 해시코드를 찾는 코드가 무한루프에 빠지게 된다.   
+3. 개방주소방법 - 이차원조사   
+$$\ h_i(x) = (h(x) + i^2) mod m $$   
+$$\ h_i(x) = (h(x) + c_1i^2 + c_2i)modm$$    
+<img src = "https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcqK23W%2Fbtqvb5YXW5k%2FlwclKRKKSx3rXfUcHFvIrk%2Fimg.png" width="300"/>   
 
-4. 개방주소방법 - 더블 해싱
-$$\ h_i(x) = (h(x) + if(x)) mod m$$ 
-여기서 h(x)와 f(x)는 서로 다른 해시함수다.  f(x)의 값은 해시테이블 크기 m과 서로소여야 한다. 권장: h(x) = x mod m, f(x) = 1+(x mod m)
+4. 개방주소방법 - 더블 해싱  
+$$\ h_i(x) = (h(x) + if(x)) mod m$$   
+여기서 h(x)와 f(x)는 서로 다른 해시함수다.  f(x)의 값은 해시테이블 크기 m과 서로소여야 한다. 권장: h(x) = x mod m, f(x) = 1+(x mod m)   
 
-### 4. 정리
+### 4. 정리  
 [출처](https://iq.opengenus.org/time-complexity-of-hash-table/)
 참고: 해시키 계산 - O(1), 인덱스찾기 - O(1)
 #### 1. 시간복잡도 (open addressing)
