--- a/CS50/7. Python.md
+++ b/CS50/7. Python.md
@@ -1279,3 +1279,18 @@ In this lesson, you learned how the building blocks of programming from prior le
 -   Regular expressions
 
 See you next time!
+
+
+# [복습용 동영상 내용 정리](https://www.youtube.com/watch?v=mgBpcQRDtl0&ab_channel=CS50)
+- python is not a compiled language
+- python is run by python interpreter, and this is similar to PHP
+
+## python Syntax
+### 1. Variables: C와의 차이점 
+- no type specifier (C: `int a = 0` -> Python: `a = 0`)
+- Declared by initialization only (C: `int a;`가능, Python: `int a = 0`만 가능)
+- python: 문자열 표시할 때 ""(double quotes), ''(single quotes) 모두 사용 가능 (C: single quotes는 문자에, double quotes는 문자열에만 사용 가능)
+
+### 2. Loops
+- C: `while`, `do-while`, `for`
+- Python: `while`, `for`
