Update 깃 사용법, 도메인 얻는법md

--- a/혼자배우는 자바스크립트/깃 사용법.md
+++ b/혼자배우는 자바스크립트/깃 사용법.md
@@ -19,3 +19,9 @@
 
 ## 3. 깃 연습하는 사이트
 https://learngitbranching.js.org/?locale=ko
+
+# 3. 프로젝트에 도메인 얻는 법
+1. netlify 접속
+2. add new site -> import an existing project -> ..
+3. domain 설정
+4. 만약 홈페이지 코드를 수정했다면 -> 깃허브에 push하면 netlify에서 자동으로 사이트 업데이트 해줌 
